added: models to the optimizing paper | save: commit before changes to gnuplot file to single plot.

--- a/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
@@ -119,8 +119,8 @@ pointer swapping enables the best solution to be shared across system components
 without introducing data races. This technique is essential in multithreaded
 environments, as it ensures the integrity of the solution during swaps, elaborated on in 
 \citep{herlihy2020art}. Multiprocessor programming has long been considered an art but 
-in recent years new tools have emerged to make this esoteric type of programming much 
-easier most notably \citep{noauthor_rust_nodate} In
+in recent years new tools have emerged to make this type of programming much 
+easier most notably \citep{noauthor_rust_nodate}. In
 software architecture, scaling is often achieved through vertical scaling
 (lengthening the dataflow) and horizontal scaling (increasing throughput)
 via message passing. While effective in many domains, this approach poses
