--- a/tex/models/operational.tex
+++ b/tex/models/operational.tex
@@ -1,5 +1,5 @@
 \begin{alignat}{2}
-	& \text{\rule{\linewidth}{0.4pt}} \notag\\
+	& \text{\rule{\linewidth}{0.8pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                     \\ 
 	& \textbf{Meta variables:}                                                                                                                                                                         \notag\\
 	& \ElementTechnician \in \SetTechnician                                                                                                                                                            \\
 	& \VarStrategicWorkOrderAssignment{}{}                                                                                                                                                             \\
@@ -29,5 +29,5 @@
 	& \VarProcessingTime \in [0, \ParOperationWork{\ElementActivity\_to\_o(\ElementActivity)} ]  \quad \forall \ElementActivity \in \SetActivity{\VarSupervisorAssignment{}{\ElementTechnician}}{} \quad \forall \ElementWorkSegment \in \SetWorkSegment                                                \\
 	& \VarSegmentInRelation \in \{0 , 1\}                                                                                                                                                                                                                                                                                     \quad \forall \ElementActivity \in \SetActivity{\VarSupervisorAssignment{}{\ElementTechnician}}{} \quad \forall \ElementWorkSegment \in \SetWorkSegment  \quad \forall i \in \SetTimeInstance \quad \forall \ElementEvent \in \SetEvent                                                                                                                         \\
 	& \VarIncludeActivity{\ElementActivity} \in \{0, 1\}                                                                                                                                      \quad \forall \ElementActivity \in \SetActivity{\VarSupervisorAssignment{}{\ElementTechnician}}{}                                                                                                     \\ 
-	& \text{\rule{\linewidth}{0.4pt}} \notag
+	& \text{\rule{\linewidth}{0.8pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                     \\ 
 \end{alignat}
