--- a/tex/models/strategic.tex
+++ b/tex/models/strategic.tex
@@ -23,7 +23,7 @@
 		& \text{\rule{\linewidth}{0.4pt}} \notag                                                                                                                                                                                                                                                                                                                                              \\
 		& \textbf{Minimize:} \notag                                                                                                                                                                                                                                                                                                                                                     \label{eqn:objective:strategic}                                     \\
 		\ifincludeclustering
-		& - \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicUrgency \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod}  \notag                                                                                                                                                                                                                             \\ 
+		& + \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicUrgency \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod}  \notag                                                                                                                                                                                                                             \\ 
 		& + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementResource \in \SetResource} \ParStrategicResourcePenalty \cdot \VarStrategicExcess     \notag                                                                                                                                                                                                                                                                          \\
 		& - \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementWorkOrder1 \in \SetWorkOrder{}} \sum_{\ElementWorkOrder2 \in \SetWorkOrder{}} 	 \quad \ParClusteringValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder1}{\ElementPeriod} \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder2}{\ElementPeriod}                                                                                             \\
 		\else
