--- a/tex/models/tactical.tex
+++ b/tex/models/tactical.tex
@@ -1,5 +1,5 @@
 \begin{alignat}{2}
-	& \text{\rule{\linewidth}{0.4pt}} \notag\\
+	& \text{\rule{\linewidth}{0.8pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                     \\ 
 	& \textbf{Meta variables:}                                                                                                                                                                                                                                                             \notag\\
 	& \ElementScheduler \in \SetScheduler                                                                                                                                                                                                                                                    \\
 	& \VarStrategicWorkOrderAssignment{}{}                                                                                                                                                                                                                                                 \\
@@ -21,6 +21,6 @@
 	& \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} \in \{0, 1\}\quad                                                                                                                                                                                         \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
 	& \VarTacticalWorkBinaryConsecutive \in \{0, 1\}\quad                                                                                                                                                                                                               \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
 	& \VarTacticalOperationDifference \in \{0, 1\}                                                                                                                                                                                                                              \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}\\
-	& \text{\rule{\linewidth}{0.4pt}} \notag
+	& \text{\rule{\linewidth}{0.8pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                     \\ 
 \end{alignat}
 
