--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Wed 08 Jan 2025 02:11:31 PM UTC
+%% Thu 09 Jan 2025 11:43:39 AM UTC
 \tikzset{every node/.append style={scale=1.00}}
 \path (0.000,0.000) rectangle (14.000,18.000);
 \gpcolor{color=gp lt color border}
@@ -13,71 +13,57 @@
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (1.400,9.000)--(1.580,9.000);
-\node[gp node right] at (1.216,9.308) {$2.2385\times10^{13}$};
+\node[gp node right] at (1.216,9.308) {$1.59\times10^{14}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,9.900)--(12.599,9.900);
+\draw[gp path] (1.400,10.157)--(12.599,10.157);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,9.900)--(1.580,9.900);
-\node[gp node right] at (1.216,10.208) {$2.239\times10^{13}$};
+\draw[gp path] (1.400,10.157)--(1.580,10.157);
+\node[gp node right] at (1.216,10.465) {$1.595\times10^{14}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,10.800)--(12.599,10.800);
+\draw[gp path] (1.400,11.314)--(12.599,11.314);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,10.800)--(1.580,10.800);
-\node[gp node right] at (1.216,11.108) {$2.2395\times10^{13}$};
+\draw[gp path] (1.400,11.314)--(1.580,11.314);
+\node[gp node right] at (1.216,11.622) {$1.6\times10^{14}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,11.700)--(12.599,11.700);
+\draw[gp path] (1.400,12.471)--(12.599,12.471);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,11.700)--(1.580,11.700);
-\node[gp node right] at (1.216,12.008) {$2.24\times10^{13}$};
+\draw[gp path] (1.400,12.471)--(1.580,12.471);
+\node[gp node right] at (1.216,12.779) {$1.605\times10^{14}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,12.600)--(12.599,12.600);
+\draw[gp path] (1.400,13.628)--(12.599,13.628);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,12.600)--(1.580,12.600);
-\node[gp node right] at (1.216,12.908) {$2.2405\times10^{13}$};
+\draw[gp path] (1.400,13.628)--(1.580,13.628);
+\node[gp node right] at (1.216,13.936) {$1.61\times10^{14}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,13.499)--(12.599,13.499);
+\draw[gp path] (1.400,14.785)--(12.599,14.785);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,13.499)--(1.580,13.499);
-\node[gp node right] at (1.216,13.807) {$2.241\times10^{13}$};
+\draw[gp path] (1.400,14.785)--(1.580,14.785);
+\node[gp node right] at (1.216,15.093) {$1.615\times10^{14}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,14.399)--(12.599,14.399);
+\draw[gp path] (1.400,15.942)--(6.163,15.942);
+\draw[gp path] (12.415,15.942)--(12.599,15.942);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,14.399)--(1.580,14.399);
-\node[gp node right] at (1.216,14.707) {$2.2415\times10^{13}$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,15.299)--(12.599,15.299);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,15.299)--(1.580,15.299);
-\node[gp node right] at (1.216,15.607) {$2.242\times10^{13}$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,16.199)--(6.163,16.199);
-\draw[gp path] (12.415,16.199)--(12.599,16.199);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,16.199)--(1.580,16.199);
-\node[gp node right] at (1.216,16.507) {$2.2425\times10^{13}$};
+\draw[gp path] (1.400,15.942)--(1.580,15.942);
+\node[gp node right] at (1.216,16.250) {$1.62\times10^{14}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (1.400,17.099)--(12.599,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (1.400,17.099)--(1.580,17.099);
-\node[gp node right] at (1.216,17.407) {$2.243\times10^{13}$};
+\node[gp node right] at (1.216,17.407) {$1.625\times10^{14}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (1.400,9.000)--(1.400,17.099);
@@ -87,50 +73,42 @@
 \draw[gp path] (1.400,17.099)--(1.400,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (3.000,9.000)--(3.000,17.099);
+\draw[gp path] (3.267,9.000)--(3.267,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (3.000,9.000)--(3.000,9.180);
-\draw[gp path] (3.000,17.099)--(3.000,16.919);
+\draw[gp path] (3.267,9.000)--(3.267,9.180);
+\draw[gp path] (3.267,17.099)--(3.267,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.600,9.000)--(4.600,17.099);
+\draw[gp path] (5.133,9.000)--(5.133,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.600,9.000)--(4.600,9.180);
-\draw[gp path] (4.600,17.099)--(4.600,16.919);
+\draw[gp path] (5.133,9.000)--(5.133,9.180);
+\draw[gp path] (5.133,17.099)--(5.133,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (6.200,9.000)--(6.200,15.379);
-\draw[gp path] (6.200,16.919)--(6.200,17.099);
+\draw[gp path] (7.000,9.000)--(7.000,15.379);
+\draw[gp path] (7.000,16.919)--(7.000,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.200,9.000)--(6.200,9.180);
-\draw[gp path] (6.200,17.099)--(6.200,16.919);
+\draw[gp path] (7.000,9.000)--(7.000,9.180);
+\draw[gp path] (7.000,17.099)--(7.000,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.799,9.000)--(7.799,15.379);
-\draw[gp path] (7.799,16.919)--(7.799,17.099);
+\draw[gp path] (8.866,9.000)--(8.866,15.379);
+\draw[gp path] (8.866,16.919)--(8.866,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.799,9.000)--(7.799,9.180);
-\draw[gp path] (7.799,17.099)--(7.799,16.919);
+\draw[gp path] (8.866,9.000)--(8.866,9.180);
+\draw[gp path] (8.866,17.099)--(8.866,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (9.399,9.000)--(9.399,15.379);
-\draw[gp path] (9.399,16.919)--(9.399,17.099);
+\draw[gp path] (10.733,9.000)--(10.733,15.379);
+\draw[gp path] (10.733,16.919)--(10.733,17.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.399,9.000)--(9.399,9.180);
-\draw[gp path] (9.399,17.099)--(9.399,16.919);
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (10.999,9.000)--(10.999,15.379);
-\draw[gp path] (10.999,16.919)--(10.999,17.099);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (10.999,9.000)--(10.999,9.180);
-\draw[gp path] (10.999,17.099)--(10.999,16.919);
+\draw[gp path] (10.733,9.000)--(10.733,9.180);
+\draw[gp path] (10.733,17.099)--(10.733,16.919);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (12.599,9.000)--(12.599,17.099);
@@ -139,46 +117,106 @@
 \draw[gp path] (12.599,9.000)--(12.599,9.180);
 \draw[gp path] (12.599,17.099)--(12.599,16.919);
 \draw[gp path] (12.599,9.000)--(12.419,9.000);
-\node[gp node left] at (12.783,9.308) {$2.2315\times10^{13}$};
-\draw[gp path] (12.599,10.012)--(12.419,10.012);
-\node[gp node left] at (12.783,10.320) {$2.232\times10^{13}$};
-\draw[gp path] (12.599,11.025)--(12.419,11.025);
-\node[gp node left] at (12.783,11.333) {$2.2325\times10^{13}$};
-\draw[gp path] (12.599,12.037)--(12.419,12.037);
-\node[gp node left] at (12.783,12.345) {$2.233\times10^{13}$};
+\node[gp node left] at (12.783,9.308) {$9.5\times10^{10}$};
+\draw[gp path] (12.599,9.810)--(12.419,9.810);
+\node[gp node left] at (12.783,10.118) {$1\times10^{11}$};
+\draw[gp path] (12.599,10.620)--(12.419,10.620);
+\node[gp node left] at (12.783,10.928) {$1.05\times10^{11}$};
+\draw[gp path] (12.599,11.430)--(12.419,11.430);
+\node[gp node left] at (12.783,11.738) {$1.1\times10^{11}$};
+\draw[gp path] (12.599,12.240)--(12.419,12.240);
+\node[gp node left] at (12.783,12.548) {$1.15\times10^{11}$};
 \draw[gp path] (12.599,13.050)--(12.419,13.050);
-\node[gp node left] at (12.783,13.358) {$2.2335\times10^{13}$};
-\draw[gp path] (12.599,14.062)--(12.419,14.062);
-\node[gp node left] at (12.783,14.370) {$2.234\times10^{13}$};
-\draw[gp path] (12.599,15.074)--(12.419,15.074);
-\node[gp node left] at (12.783,15.382) {$2.2345\times10^{13}$};
-\draw[gp path] (12.599,16.087)--(12.419,16.087);
-\node[gp node left] at (12.783,16.395) {$2.235\times10^{13}$};
+\node[gp node left] at (12.783,13.358) {$1.2\times10^{11}$};
+\draw[gp path] (12.599,13.859)--(12.419,13.859);
+\node[gp node left] at (12.783,14.167) {$1.25\times10^{11}$};
+\draw[gp path] (12.599,14.669)--(12.419,14.669);
+\node[gp node left] at (12.783,14.977) {$1.3\times10^{11}$};
+\draw[gp path] (12.599,15.479)--(12.419,15.479);
+\node[gp node left] at (12.783,15.787) {$1.35\times10^{11}$};
+\draw[gp path] (12.599,16.289)--(12.419,16.289);
+\node[gp node left] at (12.783,16.597) {$1.4\times10^{11}$};
 \draw[gp path] (12.599,17.099)--(12.419,17.099);
-\node[gp node left] at (12.783,17.407) {$2.2355\times10^{13}$};
+\node[gp node left] at (12.783,17.407) {$1.45\times10^{11}$};
 \draw[gp path] (1.400,17.099)--(1.400,9.000)--(12.599,9.000)--(12.599,17.099)--cycle;
 \draw[gp path] (6.163,15.379)--(6.163,16.919)--(12.415,16.919)--(12.415,15.379)--cycle;
 \node[gp node right] at (11.131,16.534) {Strategic Objective Value};
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.50}
 \draw[gp path] (11.315,16.534)--(12.231,16.534);
-\draw[gp path] (1.400,16.823)--(1.400,16.076)--(1.880,15.566)--(1.880,15.429)--(2.040,15.181)%
-  --(2.680,15.031)--(3.640,14.083)--(3.800,13.532)--(4.600,13.418)--(4.760,12.894)--(6.040,12.040)%
-  --(7.319,11.507)--(7.639,11.276)--(7.799,11.211)--(8.279,10.502)--(9.559,10.456)--(10.679,10.450)%
-  --(10.839,9.990)--(11.319,9.926)--(11.319,9.312);
+\draw[gp path] (1.400,16.759)--(1.400,16.714)--(1.400,16.346)--(1.431,16.094)--(1.431,15.996)%
+  --(1.431,15.981)--(1.431,15.827)--(1.431,15.713)--(1.431,15.641)--(1.431,15.516)--(1.462,15.506)%
+  --(1.462,15.443)--(1.462,15.413)--(1.462,15.321)--(1.462,15.288)--(1.462,15.220)--(1.462,15.139)%
+  --(1.493,15.059)--(1.493,14.942)--(1.493,14.855)--(1.493,14.828)--(1.493,14.745)--(1.493,14.580)%
+  --(1.524,14.567)--(1.524,14.541)--(1.524,14.496)--(1.524,14.398)--(1.524,14.341)--(1.524,14.322)%
+  --(1.524,14.215)--(1.556,14.187)--(1.556,14.108)--(1.556,14.002)--(1.556,13.998)--(1.587,13.879)%
+  --(1.587,13.874)--(1.587,13.836)--(1.587,13.807)--(1.618,13.777)--(1.618,13.685)--(1.618,13.682)%
+  --(1.649,13.681)--(1.649,13.659)--(1.649,13.567)--(1.649,13.498)--(1.680,13.492)--(1.680,13.477)%
+  --(1.680,13.409)--(1.680,13.317)--(1.680,13.306)--(1.680,13.077)--(1.680,12.984)--(1.711,12.976)%
+  --(1.711,12.963)--(1.773,12.938)--(1.773,12.922)--(1.804,12.797)--(1.804,12.722)--(1.804,12.679)%
+  --(1.804,12.640)--(1.836,12.632)--(1.836,12.627)--(1.867,12.595)--(1.867,12.593)--(1.867,12.555)%
+  --(1.929,12.536)--(1.960,12.474)--(1.991,12.451)--(1.991,12.304)--(2.022,12.302)--(2.022,12.269)%
+  --(2.053,12.229)--(2.053,12.213)--(2.084,12.204)--(2.084,12.187)--(2.084,12.183)--(2.115,12.161)%
+  --(2.115,12.131)--(2.147,12.128)--(2.178,12.117)--(2.178,12.116)--(2.209,12.111)--(2.240,12.108)%
+  --(2.240,12.038)--(2.271,12.029)--(2.302,12.013)--(2.302,12.007)--(2.333,11.989)--(2.333,11.972)%
+  --(2.333,11.931)--(2.395,11.918)--(2.427,11.419)--(2.427,11.414)--(2.458,11.386)--(2.458,11.378)%
+  --(2.613,11.377)--(2.675,11.375)--(2.893,11.364)--(3.049,11.357)--(3.235,11.349)--(3.391,11.353)%
+  --(3.422,11.346)--(3.422,11.308)--(3.422,11.307)--(3.546,11.305)--(3.578,11.298)--(3.609,11.294)%
+  --(3.640,11.281)--(3.702,11.265)--(3.764,11.262)--(3.920,11.253)--(3.920,11.240)--(3.982,11.235)%
+  --(4.044,11.231)--(4.138,11.190)--(4.324,11.160)--(4.386,11.157)--(4.418,11.140)--(4.480,10.989)%
+  --(4.511,10.975)--(4.511,10.965)--(4.511,10.946)--(4.635,10.917)--(4.666,10.907)--(5.071,10.872)%
+  --(5.102,10.870)--(5.257,10.878)--(5.382,10.868)--(5.382,10.866)--(5.475,10.861)--(5.569,10.854)%
+  --(5.662,10.851)--(5.973,10.846)--(6.004,10.846)--(6.066,10.840)--(6.315,10.838)--(6.315,10.833)%
+  --(6.346,10.833)--(6.377,10.832)--(6.595,10.827)--(6.626,10.826)--(6.657,10.818)--(6.751,10.800)%
+  --(6.844,10.780)--(6.875,10.780)--(6.906,10.777)--(6.937,10.769)--(7.000,10.760)--(7.093,10.757)%
+  --(7.217,10.728)--(7.279,10.727)--(7.497,10.714)--(7.559,10.705)--(7.715,10.692)--(8.151,10.690)%
+  --(8.182,10.671)--(8.368,10.666)--(8.399,10.659)--(8.462,10.392)--(8.586,10.381)--(8.648,10.374)%
+  --(8.804,10.360)--(8.804,10.349)--(8.897,10.332)--(8.928,10.332)--(9.084,10.323)--(9.177,10.312)%
+  --(9.239,10.309)--(9.426,10.302)--(9.550,10.301)--(9.706,10.298)--(9.737,10.298)--(9.737,10.292)%
+  --(9.861,10.285)--(9.924,10.285)--(9.955,10.282)--(9.986,10.264)--(10.017,10.257)--(10.048,10.236)%
+  --(10.048,10.214)--(10.390,10.198)--(10.484,10.194)--(10.670,10.186)--(10.888,10.208)--(11.168,10.206)%
+  --(11.635,10.205)--(11.759,10.188)--(11.946,10.184)--(12.101,10.161)--(12.226,10.132)--(12.226,10.127)%
+  --(12.443,10.126)--(12.475,10.112)--(12.599,10.096);
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (11.131,15.764) {Strategic Urgency};
 \gpcolor{rgb color={0.184,0.243,0.918}}
 \draw[gp path] (11.315,15.764)--(12.231,15.764);
-\draw[gp path] (1.400,16.396)--(1.400,15.728)--(1.880,15.216)--(1.880,15.226)--(2.040,15.060)%
-  --(2.680,14.985)--(3.640,14.005)--(3.800,13.446)--(4.600,13.425)--(4.760,12.957)--(6.040,12.081)%
-  --(7.319,11.508)--(7.639,11.290)--(7.799,11.318)--(8.279,10.597)--(9.559,10.666)--(10.679,10.662)%
-  --(10.839,10.287)--(11.319,10.275)--(11.319,9.665);
+\draw[gp path] (1.400,9.172)--(1.400,9.164)--(1.400,9.181)--(1.431,9.188)--(1.431,9.192)%
+  --(1.431,9.204)--(1.431,9.245)--(1.431,9.247)--(1.431,9.254)--(1.462,9.254)--(1.462,9.253)%
+  --(1.462,9.257)--(1.462,9.266)--(1.462,9.267)--(1.462,9.256)--(1.493,9.266)--(1.493,9.262)%
+  --(1.493,9.266)--(1.493,9.282)--(1.493,9.293)--(1.493,9.312)--(1.524,9.307)--(1.524,9.306)%
+  --(1.524,9.326)--(1.524,9.325)--(1.524,9.328)--(1.524,9.336)--(1.524,9.338)--(1.556,9.351)%
+  --(1.556,9.348)--(1.556,9.355)--(1.556,9.410)--(1.587,9.403)--(1.587,9.391)--(1.587,9.389)%
+  --(1.618,9.399)--(1.618,9.414)--(1.618,9.410)--(1.649,9.412)--(1.649,9.403)--(1.649,9.404)%
+  --(1.680,9.412)--(1.680,9.420)--(1.680,9.425)--(1.680,9.430)--(1.680,9.431)--(1.680,9.448)%
+  --(1.711,9.453)--(1.711,9.442)--(1.773,9.441)--(1.773,9.448)--(1.804,9.449)--(1.804,9.461)%
+  --(1.804,9.470)--(1.804,9.472)--(1.836,9.472)--(1.836,9.475)--(1.867,9.473)--(1.867,9.483)%
+  --(1.867,9.485)--(1.929,9.472)--(1.960,9.478)--(1.991,9.478)--(1.991,9.481)--(2.022,9.482)%
+  --(2.053,9.485)--(2.053,9.494)--(2.084,9.490)--(2.084,9.484)--(2.084,9.489)--(2.115,9.486)%
+  --(2.115,9.484)--(2.147,9.483)--(2.178,9.478)--(2.178,9.470)--(2.209,9.470)--(2.240,9.464)%
+  --(2.271,9.464)--(2.302,9.461)--(2.302,9.468)--(2.333,9.468)--(2.395,9.469)--(2.427,9.470)%
+  --(2.427,9.463)--(2.458,9.462)--(2.458,9.457)--(2.613,9.458)--(2.675,9.457)--(2.893,9.459)%
+  --(3.049,9.459)--(3.235,9.460)--(3.391,10.237)--(3.422,10.230)--(3.422,10.232)--(3.422,10.231)%
+  --(3.546,10.232)--(3.578,10.235)--(3.609,10.243)--(3.640,10.241)--(3.702,10.242)--(3.764,10.241)%
+  --(3.920,10.241)--(3.982,10.248)--(4.044,10.246)--(4.138,10.240)--(4.324,10.240)--(4.386,10.239)%
+  --(4.418,10.238)--(4.480,10.254)--(4.511,10.249)--(4.511,10.245)--(4.511,10.242)--(4.635,10.244)%
+  --(4.666,10.243)--(5.071,10.241)--(5.102,10.238)--(5.257,11.356)--(5.382,11.361)--(5.382,11.369)%
+  --(5.475,11.366)--(5.569,11.363)--(5.662,11.362)--(5.973,11.365)--(6.004,11.364)--(6.066,11.366)%
+  --(6.315,11.358)--(6.315,11.356)--(6.346,11.359)--(6.377,11.360)--(6.595,11.359)--(6.626,11.361)%
+  --(6.657,11.367)--(6.751,11.361)--(6.844,11.364)--(6.875,11.365)--(6.906,11.362)--(6.937,11.372)%
+  --(7.000,11.370)--(7.093,11.955)--(7.217,11.950)--(7.279,11.955)--(7.497,11.951)--(7.559,11.955)%
+  --(7.715,11.956)--(8.151,11.958)--(8.182,11.962)--(8.368,11.973)--(8.399,11.967)--(8.462,11.966)%
+  --(8.586,11.968)--(8.648,11.966)--(8.804,11.963)--(8.804,11.967)--(8.897,11.966)--(8.928,11.967)%
+  --(9.084,14.199)--(9.177,14.200)--(9.239,14.198)--(9.426,14.201)--(9.550,14.199)--(9.706,14.210)%
+  --(9.737,14.212)--(9.737,14.223)--(9.861,14.229)--(9.924,14.236)--(9.955,14.228)--(9.986,14.231)%
+  --(10.017,14.238)--(10.048,14.235)--(10.048,14.242)--(10.390,14.242)--(10.484,14.237)--(10.670,14.237)%
+  --(10.888,16.330)--(11.168,16.339)--(11.635,16.337)--(11.759,16.339)--(11.946,16.338)--(12.101,16.334)%
+  --(12.226,16.332)--(12.443,16.325)--(12.475,16.324)--(12.599,16.324);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (1.400,17.099)--(1.400,9.000)--(12.599,9.000)--(12.599,17.099)--cycle;
-\node[gp node center,rotate=-270] at (-2.020,13.049) {Objective value};
-\node[gp node center,rotate=-270] at (16.065,13.049) {Strategic Urgency};
+\node[gp node center,rotate=-270] at (-1.836,13.049) {Strategic Objective Value};
+\node[gp node center,rotate=-270] at (15.697,13.049) {Strategic Urgency};
 %% coordinates of the plot area
 \gpdefrectangularnode{gp plot 1}{\pgfpoint{1.400cm}{9.000cm}}{\pgfpoint{12.599cm}{17.099cm}}
 \gpcolor{rgb color={0.753,0.753,0.753}}
@@ -187,57 +225,71 @@
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (1.400,0.000)--(1.580,0.000);
-\node[gp node right] at (1.216,-0.308) {$167200$};
+\node[gp node right] at (1.216,-0.308) {$164000$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,1.157)--(12.599,1.157);
+\draw[gp path] (1.400,0.900)--(12.599,0.900);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,1.157)--(1.580,1.157);
-\node[gp node right] at (1.216,0.849) {$167400$};
+\draw[gp path] (1.400,0.900)--(1.580,0.900);
+\node[gp node right] at (1.216,0.592) {$164500$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,2.314)--(12.599,2.314);
+\draw[gp path] (1.400,1.800)--(12.599,1.800);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,2.314)--(1.580,2.314);
-\node[gp node right] at (1.216,2.006) {$167600$};
+\draw[gp path] (1.400,1.800)--(1.580,1.800);
+\node[gp node right] at (1.216,1.492) {$165000$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,3.471)--(12.599,3.471);
+\draw[gp path] (1.400,2.700)--(12.599,2.700);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,3.471)--(1.580,3.471);
-\node[gp node right] at (1.216,3.163) {$167800$};
+\draw[gp path] (1.400,2.700)--(1.580,2.700);
+\node[gp node right] at (1.216,2.392) {$165500$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,4.628)--(12.599,4.628);
+\draw[gp path] (1.400,3.600)--(12.599,3.600);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,4.628)--(1.580,4.628);
-\node[gp node right] at (1.216,4.320) {$168000$};
+\draw[gp path] (1.400,3.600)--(1.580,3.600);
+\node[gp node right] at (1.216,3.292) {$166000$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,5.785)--(12.599,5.785);
+\draw[gp path] (1.400,4.499)--(12.599,4.499);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,5.785)--(1.580,5.785);
-\node[gp node right] at (1.216,5.477) {$168200$};
+\draw[gp path] (1.400,4.499)--(1.580,4.499);
+\node[gp node right] at (1.216,4.191) {$166500$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,6.942)--(5.979,6.942);
-\draw[gp path] (12.415,6.942)--(12.599,6.942);
+\draw[gp path] (1.400,5.399)--(12.599,5.399);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,6.942)--(1.580,6.942);
-\node[gp node right] at (1.216,6.634) {$168400$};
+\draw[gp path] (1.400,5.399)--(1.580,5.399);
+\node[gp node right] at (1.216,5.091) {$167000$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (1.400,6.299)--(12.599,6.299);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (1.400,6.299)--(1.580,6.299);
+\node[gp node right] at (1.216,5.991) {$167500$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (1.400,7.199)--(5.979,7.199);
+\draw[gp path] (12.415,7.199)--(12.599,7.199);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (1.400,7.199)--(1.580,7.199);
+\node[gp node right] at (1.216,6.891) {$168000$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (1.400,8.099)--(12.599,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (1.400,8.099)--(1.580,8.099);
-\node[gp node right] at (1.216,7.791) {$168600$};
+\node[gp node right] at (1.216,7.791) {$168500$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (1.400,0.000)--(1.400,8.099);
@@ -248,56 +300,47 @@
 \node[gp node left,rotate=270] at (1.400,-0.184) {0};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (3.000,0.000)--(3.000,8.099);
+\draw[gp path] (3.267,0.000)--(3.267,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (3.000,0.000)--(3.000,0.180);
-\draw[gp path] (3.000,8.099)--(3.000,7.919);
-\node[gp node left,rotate=270] at (3.000,-0.184) {10};
+\draw[gp path] (3.267,0.000)--(3.267,0.180);
+\draw[gp path] (3.267,8.099)--(3.267,7.919);
+\node[gp node left,rotate=270] at (3.267,-0.184) {60};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.600,0.000)--(4.600,8.099);
+\draw[gp path] (5.133,0.000)--(5.133,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.600,0.000)--(4.600,0.180);
-\draw[gp path] (4.600,8.099)--(4.600,7.919);
-\node[gp node left,rotate=270] at (4.600,-0.184) {20};
+\draw[gp path] (5.133,0.000)--(5.133,0.180);
+\draw[gp path] (5.133,8.099)--(5.133,7.919);
+\node[gp node left,rotate=270] at (5.133,-0.184) {120};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (6.200,0.000)--(6.200,6.379);
-\draw[gp path] (6.200,7.919)--(6.200,8.099);
+\draw[gp path] (7.000,0.000)--(7.000,6.379);
+\draw[gp path] (7.000,7.919)--(7.000,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.200,0.000)--(6.200,0.180);
-\draw[gp path] (6.200,8.099)--(6.200,7.919);
-\node[gp node left,rotate=270] at (6.200,-0.184) {30};
+\draw[gp path] (7.000,0.000)--(7.000,0.180);
+\draw[gp path] (7.000,8.099)--(7.000,7.919);
+\node[gp node left,rotate=270] at (7.000,-0.184) {180};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.799,0.000)--(7.799,6.379);
-\draw[gp path] (7.799,7.919)--(7.799,8.099);
+\draw[gp path] (8.866,0.000)--(8.866,6.379);
+\draw[gp path] (8.866,7.919)--(8.866,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.799,0.000)--(7.799,0.180);
-\draw[gp path] (7.799,8.099)--(7.799,7.919);
-\node[gp node left,rotate=270] at (7.799,-0.184) {40};
+\draw[gp path] (8.866,0.000)--(8.866,0.180);
+\draw[gp path] (8.866,8.099)--(8.866,7.919);
+\node[gp node left,rotate=270] at (8.866,-0.184) {240};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (9.399,0.000)--(9.399,6.379);
-\draw[gp path] (9.399,7.919)--(9.399,8.099);
+\draw[gp path] (10.733,0.000)--(10.733,6.379);
+\draw[gp path] (10.733,7.919)--(10.733,8.099);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.399,0.000)--(9.399,0.180);
-\draw[gp path] (9.399,8.099)--(9.399,7.919);
-\node[gp node left,rotate=270] at (9.399,-0.184) {50};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (10.999,0.000)--(10.999,6.379);
-\draw[gp path] (10.999,7.919)--(10.999,8.099);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (10.999,0.000)--(10.999,0.180);
-\draw[gp path] (10.999,8.099)--(10.999,7.919);
-\node[gp node left,rotate=270] at (10.999,-0.184) {60};
+\draw[gp path] (10.733,0.000)--(10.733,0.180);
+\draw[gp path] (10.733,8.099)--(10.733,7.919);
+\node[gp node left,rotate=270] at (10.733,-0.184) {300};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (12.599,0.000)--(12.599,8.099);
@@ -305,53 +348,108 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (12.599,0.000)--(12.599,0.180);
 \draw[gp path] (12.599,8.099)--(12.599,7.919);
-\node[gp node left,rotate=270] at (12.599,-0.184) {70};
+\node[gp node left,rotate=270] at (12.599,-0.184) {360};
 \draw[gp path] (12.599,0.000)--(12.419,0.000);
-\node[gp node left] at (12.783,-0.308) {$5.1\times10^{6}$};
-\draw[gp path] (12.599,0.810)--(12.419,0.810);
-\node[gp node left] at (12.783,0.502) {$5.2\times10^{6}$};
-\draw[gp path] (12.599,1.620)--(12.419,1.620);
-\node[gp node left] at (12.783,1.312) {$5.3\times10^{6}$};
-\draw[gp path] (12.599,2.430)--(12.419,2.430);
-\node[gp node left] at (12.783,2.122) {$5.4\times10^{6}$};
-\draw[gp path] (12.599,3.240)--(12.419,3.240);
-\node[gp node left] at (12.783,2.932) {$5.5\times10^{6}$};
-\draw[gp path] (12.599,4.050)--(12.419,4.050);
-\node[gp node left] at (12.783,3.742) {$5.6\times10^{6}$};
-\draw[gp path] (12.599,4.859)--(12.419,4.859);
-\node[gp node left] at (12.783,4.551) {$5.7\times10^{6}$};
-\draw[gp path] (12.599,5.669)--(12.419,5.669);
-\node[gp node left] at (12.783,5.361) {$5.8\times10^{6}$};
-\draw[gp path] (12.599,6.479)--(12.419,6.479);
-\node[gp node left] at (12.783,6.171) {$5.9\times10^{6}$};
-\draw[gp path] (12.599,7.289)--(12.419,7.289);
-\node[gp node left] at (12.783,6.981) {$6\times10^{6}$};
+\node[gp node left] at (12.783,-0.308) {$4.4\times10^{6}$};
+\draw[gp path] (12.599,0.900)--(12.419,0.900);
+\node[gp node left] at (12.783,0.592) {$4.6\times10^{6}$};
+\draw[gp path] (12.599,1.800)--(12.419,1.800);
+\node[gp node left] at (12.783,1.492) {$4.8\times10^{6}$};
+\draw[gp path] (12.599,2.700)--(12.419,2.700);
+\node[gp node left] at (12.783,2.392) {$5\times10^{6}$};
+\draw[gp path] (12.599,3.600)--(12.419,3.600);
+\node[gp node left] at (12.783,3.292) {$5.2\times10^{6}$};
+\draw[gp path] (12.599,4.499)--(12.419,4.499);
+\node[gp node left] at (12.783,4.191) {$5.4\times10^{6}$};
+\draw[gp path] (12.599,5.399)--(12.419,5.399);
+\node[gp node left] at (12.783,5.091) {$5.6\times10^{6}$};
+\draw[gp path] (12.599,6.299)--(12.419,6.299);
+\node[gp node left] at (12.783,5.991) {$5.8\times10^{6}$};
+\draw[gp path] (12.599,7.199)--(12.419,7.199);
+\node[gp node left] at (12.783,6.891) {$6\times10^{6}$};
 \draw[gp path] (12.599,8.099)--(12.419,8.099);
-\node[gp node left] at (12.783,7.791) {$6.1\times10^{6}$};
+\node[gp node left] at (12.783,7.791) {$6.2\times10^{6}$};
 \draw[gp path] (1.400,8.099)--(1.400,0.000)--(12.599,0.000)--(12.599,8.099)--cycle;
 \draw[gp path] (5.979,6.379)--(5.979,7.919)--(12.415,7.919)--(12.415,6.379)--cycle;
 \node[gp node right] at (11.131,7.534) {Strategic Resource Penalty};
 \gpcolor{rgb color={0.000,0.533,0.208}}
 \gpsetlinewidth{2.50}
 \draw[gp path] (11.315,7.534)--(12.231,7.534);
-\draw[gp path] (1.400,7.266)--(1.400,6.578)--(1.880,6.416)--(1.880,5.808)--(2.040,5.548)%
-  --(2.680,5.212)--(3.640,4.501)--(3.800,4.269)--(4.600,3.760)--(4.760,3.517)--(6.040,2.893)%
-  --(7.319,2.389)--(7.639,2.250)--(7.799,1.851)--(8.279,2.013)--(9.559,1.730)--(10.679,1.695)%
-  --(10.839,1.261)--(11.319,0.862)--(11.319,0.434);
+\draw[gp path] (1.400,7.716)--(1.400,7.552)--(1.400,7.206)--(1.431,6.895)--(1.431,6.749)%
+  --(1.431,6.697)--(1.431,6.506)--(1.431,6.324)--(1.431,6.157)--(1.431,5.986)--(1.462,5.950)%
+  --(1.462,5.811)--(1.462,5.770)--(1.462,5.624)--(1.462,5.576)--(1.462,5.502)--(1.462,5.385)%
+  --(1.493,5.290)--(1.493,5.182)--(1.493,5.072)--(1.493,4.978)--(1.493,4.894)--(1.493,4.724)%
+  --(1.524,4.660)--(1.524,4.625)--(1.524,4.559)--(1.524,4.444)--(1.524,4.345)--(1.524,4.280)%
+  --(1.524,4.098)--(1.556,4.058)--(1.556,3.990)--(1.556,3.857)--(1.556,3.799)--(1.587,3.639)%
+  --(1.587,3.565)--(1.587,3.511)--(1.618,3.387)--(1.618,3.315)--(1.618,3.333)--(1.649,3.283)%
+  --(1.649,3.234)--(1.649,3.114)--(1.649,3.076)--(1.680,3.054)--(1.680,3.011)--(1.680,2.928)%
+  --(1.680,2.809)--(1.680,2.755)--(1.680,2.556)--(1.680,2.449)--(1.711,2.406)--(1.711,2.367)%
+  --(1.773,2.343)--(1.773,2.318)--(1.804,2.216)--(1.804,2.153)--(1.804,2.118)--(1.804,2.090)%
+  --(1.836,2.088)--(1.836,2.099)--(1.867,2.061)--(1.867,2.021)--(1.867,1.980)--(1.929,1.953)%
+  --(1.960,1.906)--(1.991,1.857)--(1.991,1.717)--(2.022,1.681)--(2.022,1.652)--(2.053,1.569)%
+  --(2.053,1.573)--(2.084,1.533)--(2.084,1.517)--(2.115,1.463)--(2.115,1.452)--(2.147,1.452)%
+  --(2.178,1.445)--(2.178,1.454)--(2.209,1.436)--(2.240,1.436)--(2.240,1.379)--(2.271,1.373)%
+  --(2.302,1.335)--(2.333,1.296)--(2.333,1.298)--(2.333,1.253)--(2.395,1.258)--(2.427,0.869)%
+  --(2.427,0.853)--(2.458,0.805)--(2.458,0.785)--(2.613,0.765)--(2.675,0.747)--(2.893,0.781)%
+  --(3.049,0.776)--(3.235,0.783)--(3.391,0.792)--(3.422,0.803)--(3.422,0.778)--(3.422,0.751)%
+  --(3.546,0.761)--(3.578,0.769)--(3.609,0.779)--(3.640,0.743)--(3.702,0.729)--(3.764,0.729)%
+  --(3.920,0.740)--(3.920,0.682)--(3.982,0.661)--(4.044,0.641)--(4.138,0.612)--(4.324,0.617)%
+  --(4.386,0.617)--(4.418,0.635)--(4.480,0.500)--(4.511,0.490)--(4.511,0.481)--(4.511,0.479)%
+  --(4.635,0.470)--(4.666,0.436)--(5.071,0.428)--(5.102,0.428)--(5.257,0.437)--(5.382,0.430)%
+  --(5.382,0.445)--(5.475,0.425)--(5.569,0.436)--(5.662,0.446)--(5.973,0.446)--(6.004,0.446)%
+  --(6.066,0.452)--(6.315,0.468)--(6.315,0.452)--(6.346,0.452)--(6.377,0.466)--(6.595,0.452)%
+  --(6.626,0.448)--(6.657,0.448)--(6.751,0.448)--(6.844,0.452)--(6.875,0.454)--(6.906,0.454)%
+  --(6.937,0.461)--(7.000,0.425)--(7.093,0.430)--(7.217,0.441)--(7.279,0.455)--(7.497,0.446)%
+  --(7.559,0.439)--(7.715,0.425)--(8.151,0.450)--(8.182,0.434)--(8.368,0.448)--(8.399,0.441)%
+  --(8.462,0.184)--(8.586,0.175)--(8.648,0.166)--(8.804,0.166)--(8.804,0.169)--(8.897,0.169)%
+  --(8.928,0.155)--(9.084,0.124)--(9.177,0.128)--(9.239,0.121)--(9.426,0.130)--(9.550,0.144)%
+  --(9.706,0.122)--(9.737,0.153)--(9.737,0.167)--(9.861,0.191)--(9.924,0.187)--(9.955,0.216)%
+  --(9.986,0.196)--(10.017,0.191)--(10.048,0.173)--(10.048,0.187)--(10.390,0.194)--(10.484,0.194)%
+  --(10.670,0.205)--(10.888,0.196)--(11.168,0.196)--(11.635,0.196)--(11.759,0.196)--(11.946,0.189)%
+  --(12.101,0.157)--(12.226,0.133)--(12.226,0.128)--(12.443,0.128)--(12.475,0.130)--(12.599,0.137);
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (11.131,6.764) {Strategic Clustering Value};
 \gpcolor{rgb color={0.475,0.137,0.557}}
 \draw[gp path] (11.315,6.764)--(12.231,6.764);
-\draw[gp path] (1.400,7.362)--(1.400,6.684)--(1.880,6.436)--(1.880,5.789)--(2.040,5.346)%
-  --(2.680,4.975)--(3.640,4.638)--(3.800,4.397)--(4.600,3.978)--(4.760,3.494)--(6.040,3.164)%
-  --(7.319,3.062)--(7.639,2.898)--(7.799,2.498)--(8.279,2.188)--(9.559,1.711)--(10.679,1.700)%
-  --(10.839,1.136)--(11.319,0.899)--(11.319,0.584);
+\draw[gp path] (1.400,7.335)--(1.400,7.011)--(1.400,6.864)--(1.431,6.576)--(1.431,6.402)%
+  --(1.431,6.302)--(1.431,6.123)--(1.431,5.892)--(1.431,5.614)--(1.431,5.430)--(1.462,5.359)%
+  --(1.462,5.136)--(1.462,5.089)--(1.462,4.904)--(1.462,4.846)--(1.462,4.794)--(1.462,4.660)%
+  --(1.493,4.576)--(1.493,4.535)--(1.493,4.430)--(1.493,4.247)--(1.493,4.198)--(1.493,4.097)%
+  --(1.524,3.960)--(1.524,3.926)--(1.524,3.847)--(1.524,3.750)--(1.524,3.613)--(1.524,3.488)%
+  --(1.524,3.242)--(1.556,3.196)--(1.556,3.180)--(1.556,3.053)--(1.556,2.919)--(1.587,2.750)%
+  --(1.587,2.759)--(1.587,2.648)--(1.587,2.569)--(1.618,2.318)--(1.618,2.317)--(1.618,2.368)%
+  --(1.649,2.244)--(1.649,2.165)--(1.649,2.043)--(1.649,2.082)--(1.680,2.040)--(1.680,1.961)%
+  --(1.680,1.885)--(1.680,1.768)--(1.680,1.655)--(1.680,1.601)--(1.680,1.516)--(1.711,1.425)%
+  --(1.711,1.350)--(1.773,1.341)--(1.773,1.309)--(1.804,1.296)--(1.804,1.284)--(1.804,1.281)%
+  --(1.804,1.286)--(1.836,1.298)--(1.836,1.334)--(1.867,1.302)--(1.867,1.207)--(1.867,1.178)%
+  --(1.929,1.146)--(1.960,1.150)--(1.991,1.074)--(1.991,1.008)--(2.022,0.922)--(2.022,0.915)%
+  --(2.053,0.785)--(2.053,0.826)--(2.084,0.745)--(2.084,0.736)--(2.084,0.744)--(2.115,0.653)%
+  --(2.115,0.683)--(2.147,0.690)--(2.178,0.693)--(2.178,0.717)--(2.209,0.682)--(2.240,0.686)%
+  --(2.240,0.679)--(2.271,0.683)--(2.302,0.619)--(2.302,0.632)--(2.333,0.568)--(2.333,0.604)%
+  --(2.333,0.573)--(2.395,0.610)--(2.427,0.610)--(2.427,0.578)--(2.458,0.512)--(2.458,0.478)%
+  --(2.613,0.430)--(2.675,0.390)--(2.893,0.496)--(3.049,0.496)--(3.235,0.529)--(3.391,0.567)%
+  --(3.422,0.606)--(3.422,0.617)--(3.422,0.551)--(3.546,0.582)--(3.578,0.615)--(3.609,0.650)%
+  --(3.640,0.585)--(3.702,0.580)--(3.764,0.585)--(3.920,0.630)--(3.920,0.511)--(3.982,0.467)%
+  --(4.044,0.425)--(4.138,0.434)--(4.324,0.505)--(4.386,0.510)--(4.418,0.588)--(4.480,0.545)%
+  --(4.511,0.546)--(4.511,0.542)--(4.511,0.574)--(4.635,0.609)--(4.666,0.543)--(5.071,0.592)%
+  --(5.102,0.597)--(5.257,0.634)--(5.382,0.636)--(5.382,0.676)--(5.475,0.636)--(5.569,0.676)%
+  --(5.662,0.709)--(5.973,0.719)--(6.004,0.720)--(6.066,0.744)--(6.315,0.789)--(6.315,0.757)%
+  --(6.346,0.758)--(6.377,0.796)--(6.595,0.769)--(6.626,0.762)--(6.657,0.778)--(6.751,0.814)%
+  --(6.844,0.860)--(6.875,0.866)--(6.906,0.872)--(6.937,0.906)--(7.000,0.833)--(7.093,0.868)%
+  --(7.217,0.951)--(7.279,0.990)--(7.497,0.992)--(7.559,0.992)--(7.715,0.981)--(8.151,1.049)%
+  --(8.182,1.044)--(8.368,1.091)--(8.399,1.086)--(8.462,0.963)--(8.586,0.962)--(8.648,0.952)%
+  --(8.804,0.980)--(8.804,1.010)--(8.897,1.042)--(8.928,1.007)--(9.084,1.009)--(9.177,1.039)%
+  --(9.239,1.027)--(9.426,1.064)--(9.550,1.102)--(9.706,1.053)--(9.737,1.130)--(9.737,1.178)%
+  --(9.861,1.250)--(9.924,1.243)--(9.955,1.320)--(9.986,1.304)--(10.017,1.305)--(10.048,1.301)%
+  --(10.048,1.380)--(10.390,1.430)--(10.484,1.436)--(10.670,1.480)--(10.888,1.472)--(11.168,1.476)%
+  --(11.635,1.479)--(11.759,1.511)--(11.946,1.502)--(12.101,1.465)--(12.226,1.462)--(12.226,1.460)%
+  --(12.443,1.462)--(12.475,1.492)--(12.599,1.542);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (1.400,8.099)--(1.400,0.000)--(12.599,0.000)--(12.599,8.099)--cycle;
 \node[gp node center,rotate=-270] at (-1.100,4.049) {Strategic Resource Penalty [Hours]};
 \node[gp node center,rotate=-270] at (15.329,4.049) {Strategic Clustering Value};
-\node[gp node center] at (6.999,-1.445) {Relative time ($\tau$) [S]};
+\node[gp node center] at (6.999,-1.629) {Relative time ($\tau$) [S]};
 %% coordinates of the plot area
 \gpdefrectangularnode{gp plot 2}{\pgfpoint{1.400cm}{0.000cm}}{\pgfpoint{12.599cm}{8.099cm}}
 \endtikzpicture
