--- a/papers/optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/tex/solution_method.tex
+++ b/papers/optimizing-a-maintenance-scheduling-system-through-the-use-of-atomic-pointer-swaps/tex/solution_method.tex
@@ -1,1 +1,8 @@
 \section{Solution Method}
+
+
+\subsection{Atomic Pointer Swapping}
+
+
+\input{figures/atomic-pointer-swap-figure.tex}
+\drawAtomicPointerSwapping
