--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
@@ -1,456 +1,258 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Thu 09 Jan 2025 11:43:39 AM UTC
+%% Fri 10 Jan 2025 11:17:13 AM UTC
 \tikzset{every node/.append style={scale=1.00}}
-\path (0.000,0.000) rectangle (14.000,18.000);
-\gpcolor{color=gp lt color border}
-\node[gp node center] at (7.000,17.692) {Strategic Objective Values};
+\path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,9.000)--(12.599,9.000);
+\draw[gp path] (2.424,1.845)--(13.667,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,9.000)--(1.580,9.000);
-\node[gp node right] at (1.216,9.308) {$1.59\times10^{14}$};
+\draw[gp path] (2.424,1.845)--(2.604,1.845);
+\node[gp node right] at (2.240,2.153) {$9.5\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,10.157)--(12.599,10.157);
+\draw[gp path] (2.424,2.871)--(13.667,2.871);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,10.157)--(1.580,10.157);
-\node[gp node right] at (1.216,10.465) {$1.595\times10^{14}$};
+\draw[gp path] (2.424,2.871)--(2.604,2.871);
+\node[gp node right] at (2.240,3.179) {$1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,11.314)--(12.599,11.314);
+\draw[gp path] (2.424,3.896)--(13.667,3.896);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,11.314)--(1.580,11.314);
-\node[gp node right] at (1.216,11.622) {$1.6\times10^{14}$};
+\draw[gp path] (2.424,3.896)--(2.604,3.896);
+\node[gp node right] at (2.240,4.204) {$1.05\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,12.471)--(12.599,12.471);
+\draw[gp path] (2.424,4.922)--(13.667,4.922);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,12.471)--(1.580,12.471);
-\node[gp node right] at (1.216,12.779) {$1.605\times10^{14}$};
+\draw[gp path] (2.424,4.922)--(2.604,4.922);
+\node[gp node right] at (2.240,5.230) {$1.1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,13.628)--(12.599,13.628);
+\draw[gp path] (2.424,5.947)--(13.667,5.947);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,13.628)--(1.580,13.628);
-\node[gp node right] at (1.216,13.936) {$1.61\times10^{14}$};
+\draw[gp path] (2.424,5.947)--(2.604,5.947);
+\node[gp node right] at (2.240,6.255) {$1.15\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,14.785)--(12.599,14.785);
+\draw[gp path] (2.424,6.973)--(13.667,6.973);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,14.785)--(1.580,14.785);
-\node[gp node right] at (1.216,15.093) {$1.615\times10^{14}$};
+\draw[gp path] (2.424,6.973)--(2.604,6.973);
+\node[gp node right] at (2.240,7.281) {$1.2\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,15.942)--(6.163,15.942);
-\draw[gp path] (12.415,15.942)--(12.599,15.942);
+\draw[gp path] (2.424,7.998)--(13.667,7.998);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,15.942)--(1.580,15.942);
-\node[gp node right] at (1.216,16.250) {$1.62\times10^{14}$};
+\draw[gp path] (2.424,7.998)--(2.604,7.998);
+\node[gp node right] at (2.240,8.306) {$1.25\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,17.099)--(12.599,17.099);
+\draw[gp path] (2.424,9.024)--(13.667,9.024);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,17.099)--(1.580,17.099);
-\node[gp node right] at (1.216,17.407) {$1.625\times10^{14}$};
+\draw[gp path] (2.424,9.024)--(2.604,9.024);
+\node[gp node right] at (2.240,9.332) {$1.3\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (1.400,9.000)--(1.400,17.099);
+\draw[gp path] (2.424,10.049)--(7.047,10.049);
+\draw[gp path] (13.483,10.049)--(13.667,10.049);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,9.000)--(1.400,9.180);
-\draw[gp path] (1.400,17.099)--(1.400,16.919);
+\draw[gp path] (2.424,10.049)--(2.604,10.049);
+\node[gp node right] at (2.240,10.357) {$1.35\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (3.267,9.000)--(3.267,17.099);
+\draw[gp path] (2.424,11.075)--(13.667,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (3.267,9.000)--(3.267,9.180);
-\draw[gp path] (3.267,17.099)--(3.267,16.919);
+\draw[gp path] (2.424,11.075)--(2.604,11.075);
+\node[gp node right] at (2.240,11.383) {$1.4\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (5.133,9.000)--(5.133,17.099);
+\draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.133,9.000)--(5.133,9.180);
-\draw[gp path] (5.133,17.099)--(5.133,16.919);
+\draw[gp path] (2.424,1.845)--(2.424,2.025);
+\draw[gp path] (2.424,11.075)--(2.424,10.895);
+\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.000,9.000)--(7.000,15.379);
-\draw[gp path] (7.000,16.919)--(7.000,17.099);
+\draw[gp path] (4.030,1.845)--(4.030,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.000,9.000)--(7.000,9.180);
-\draw[gp path] (7.000,17.099)--(7.000,16.919);
+\draw[gp path] (4.030,1.845)--(4.030,2.025);
+\draw[gp path] (4.030,11.075)--(4.030,10.895);
+\node[gp node left,rotate=270] at (4.030,1.661) {$60$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (8.866,9.000)--(8.866,15.379);
-\draw[gp path] (8.866,16.919)--(8.866,17.099);
+\draw[gp path] (5.636,1.845)--(5.636,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.866,9.000)--(8.866,9.180);
-\draw[gp path] (8.866,17.099)--(8.866,16.919);
+\draw[gp path] (5.636,1.845)--(5.636,2.025);
+\draw[gp path] (5.636,11.075)--(5.636,10.895);
+\node[gp node left,rotate=270] at (5.636,1.661) {$120$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (10.733,9.000)--(10.733,15.379);
-\draw[gp path] (10.733,16.919)--(10.733,17.099);
+\draw[gp path] (7.242,1.845)--(7.242,9.355);
+\draw[gp path] (7.242,10.895)--(7.242,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.733,9.000)--(10.733,9.180);
-\draw[gp path] (10.733,17.099)--(10.733,16.919);
+\draw[gp path] (7.242,1.845)--(7.242,2.025);
+\draw[gp path] (7.242,11.075)--(7.242,10.895);
+\node[gp node left,rotate=270] at (7.242,1.661) {$180$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (12.599,9.000)--(12.599,17.099);
+\draw[gp path] (8.849,1.845)--(8.849,9.355);
+\draw[gp path] (8.849,10.895)--(8.849,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (12.599,9.000)--(12.599,9.180);
-\draw[gp path] (12.599,17.099)--(12.599,16.919);
-\draw[gp path] (12.599,9.000)--(12.419,9.000);
-\node[gp node left] at (12.783,9.308) {$9.5\times10^{10}$};
-\draw[gp path] (12.599,9.810)--(12.419,9.810);
-\node[gp node left] at (12.783,10.118) {$1\times10^{11}$};
-\draw[gp path] (12.599,10.620)--(12.419,10.620);
-\node[gp node left] at (12.783,10.928) {$1.05\times10^{11}$};
-\draw[gp path] (12.599,11.430)--(12.419,11.430);
-\node[gp node left] at (12.783,11.738) {$1.1\times10^{11}$};
-\draw[gp path] (12.599,12.240)--(12.419,12.240);
-\node[gp node left] at (12.783,12.548) {$1.15\times10^{11}$};
-\draw[gp path] (12.599,13.050)--(12.419,13.050);
-\node[gp node left] at (12.783,13.358) {$1.2\times10^{11}$};
-\draw[gp path] (12.599,13.859)--(12.419,13.859);
-\node[gp node left] at (12.783,14.167) {$1.25\times10^{11}$};
-\draw[gp path] (12.599,14.669)--(12.419,14.669);
-\node[gp node left] at (12.783,14.977) {$1.3\times10^{11}$};
-\draw[gp path] (12.599,15.479)--(12.419,15.479);
-\node[gp node left] at (12.783,15.787) {$1.35\times10^{11}$};
-\draw[gp path] (12.599,16.289)--(12.419,16.289);
-\node[gp node left] at (12.783,16.597) {$1.4\times10^{11}$};
-\draw[gp path] (12.599,17.099)--(12.419,17.099);
-\node[gp node left] at (12.783,17.407) {$1.45\times10^{11}$};
-\draw[gp path] (1.400,17.099)--(1.400,9.000)--(12.599,9.000)--(12.599,17.099)--cycle;
-\draw[gp path] (6.163,15.379)--(6.163,16.919)--(12.415,16.919)--(12.415,15.379)--cycle;
-\node[gp node right] at (11.131,16.534) {Strategic Objective Value};
+\draw[gp path] (8.849,1.845)--(8.849,2.025);
+\draw[gp path] (8.849,11.075)--(8.849,10.895);
+\node[gp node left,rotate=270] at (8.849,1.661) {$240$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (10.455,1.845)--(10.455,9.355);
+\draw[gp path] (10.455,10.895)--(10.455,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (10.455,1.845)--(10.455,2.025);
+\draw[gp path] (10.455,11.075)--(10.455,10.895);
+\node[gp node left,rotate=270] at (10.455,1.661) {$300$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (12.061,1.845)--(12.061,9.355);
+\draw[gp path] (12.061,10.895)--(12.061,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (12.061,1.845)--(12.061,2.025);
+\draw[gp path] (12.061,11.075)--(12.061,10.895);
+\node[gp node left,rotate=270] at (12.061,1.661) {$360$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (13.667,1.845)--(13.667,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.667,1.845)--(13.667,2.025);
+\draw[gp path] (13.667,11.075)--(13.667,10.895);
+\node[gp node left,rotate=270] at (13.667,1.661) {$420$};
+\draw[gp path] (13.667,1.845)--(13.487,1.845);
+\node[gp node left] at (13.851,2.153) {$164000$};
+\draw[gp path] (13.667,2.768)--(13.487,2.768);
+\node[gp node left] at (13.851,3.076) {$164500$};
+\draw[gp path] (13.667,3.691)--(13.487,3.691);
+\node[gp node left] at (13.851,3.999) {$165000$};
+\draw[gp path] (13.667,4.614)--(13.487,4.614);
+\node[gp node left] at (13.851,4.922) {$165500$};
+\draw[gp path] (13.667,5.537)--(13.487,5.537);
+\node[gp node left] at (13.851,5.845) {$166000$};
+\draw[gp path] (13.667,6.460)--(13.487,6.460);
+\node[gp node left] at (13.851,6.768) {$166500$};
+\draw[gp path] (13.667,7.383)--(13.487,7.383);
+\node[gp node left] at (13.851,7.691) {$167000$};
+\draw[gp path] (13.667,8.306)--(13.487,8.306);
+\node[gp node left] at (13.851,8.614) {$167500$};
+\draw[gp path] (13.667,9.229)--(13.487,9.229);
+\node[gp node left] at (13.851,9.537) {$168000$};
+\draw[gp path] (13.667,10.152)--(13.487,10.152);
+\node[gp node left] at (13.851,10.460) {$168500$};
+\draw[gp path] (13.667,11.075)--(13.487,11.075);
+\node[gp node left] at (13.851,11.383) {$169000$};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
+\draw[gp path] (7.047,9.355)--(7.047,10.895)--(13.483,10.895)--(13.483,9.355)--cycle;
+\node[gp node right] at (12.199,10.510) {Strategic Urgency};
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.50}
-\draw[gp path] (11.315,16.534)--(12.231,16.534);
-\draw[gp path] (1.400,16.759)--(1.400,16.714)--(1.400,16.346)--(1.431,16.094)--(1.431,15.996)%
-  --(1.431,15.981)--(1.431,15.827)--(1.431,15.713)--(1.431,15.641)--(1.431,15.516)--(1.462,15.506)%
-  --(1.462,15.443)--(1.462,15.413)--(1.462,15.321)--(1.462,15.288)--(1.462,15.220)--(1.462,15.139)%
-  --(1.493,15.059)--(1.493,14.942)--(1.493,14.855)--(1.493,14.828)--(1.493,14.745)--(1.493,14.580)%
-  --(1.524,14.567)--(1.524,14.541)--(1.524,14.496)--(1.524,14.398)--(1.524,14.341)--(1.524,14.322)%
-  --(1.524,14.215)--(1.556,14.187)--(1.556,14.108)--(1.556,14.002)--(1.556,13.998)--(1.587,13.879)%
-  --(1.587,13.874)--(1.587,13.836)--(1.587,13.807)--(1.618,13.777)--(1.618,13.685)--(1.618,13.682)%
-  --(1.649,13.681)--(1.649,13.659)--(1.649,13.567)--(1.649,13.498)--(1.680,13.492)--(1.680,13.477)%
-  --(1.680,13.409)--(1.680,13.317)--(1.680,13.306)--(1.680,13.077)--(1.680,12.984)--(1.711,12.976)%
-  --(1.711,12.963)--(1.773,12.938)--(1.773,12.922)--(1.804,12.797)--(1.804,12.722)--(1.804,12.679)%
-  --(1.804,12.640)--(1.836,12.632)--(1.836,12.627)--(1.867,12.595)--(1.867,12.593)--(1.867,12.555)%
-  --(1.929,12.536)--(1.960,12.474)--(1.991,12.451)--(1.991,12.304)--(2.022,12.302)--(2.022,12.269)%
-  --(2.053,12.229)--(2.053,12.213)--(2.084,12.204)--(2.084,12.187)--(2.084,12.183)--(2.115,12.161)%
-  --(2.115,12.131)--(2.147,12.128)--(2.178,12.117)--(2.178,12.116)--(2.209,12.111)--(2.240,12.108)%
-  --(2.240,12.038)--(2.271,12.029)--(2.302,12.013)--(2.302,12.007)--(2.333,11.989)--(2.333,11.972)%
-  --(2.333,11.931)--(2.395,11.918)--(2.427,11.419)--(2.427,11.414)--(2.458,11.386)--(2.458,11.378)%
-  --(2.613,11.377)--(2.675,11.375)--(2.893,11.364)--(3.049,11.357)--(3.235,11.349)--(3.391,11.353)%
-  --(3.422,11.346)--(3.422,11.308)--(3.422,11.307)--(3.546,11.305)--(3.578,11.298)--(3.609,11.294)%
-  --(3.640,11.281)--(3.702,11.265)--(3.764,11.262)--(3.920,11.253)--(3.920,11.240)--(3.982,11.235)%
-  --(4.044,11.231)--(4.138,11.190)--(4.324,11.160)--(4.386,11.157)--(4.418,11.140)--(4.480,10.989)%
-  --(4.511,10.975)--(4.511,10.965)--(4.511,10.946)--(4.635,10.917)--(4.666,10.907)--(5.071,10.872)%
-  --(5.102,10.870)--(5.257,10.878)--(5.382,10.868)--(5.382,10.866)--(5.475,10.861)--(5.569,10.854)%
-  --(5.662,10.851)--(5.973,10.846)--(6.004,10.846)--(6.066,10.840)--(6.315,10.838)--(6.315,10.833)%
-  --(6.346,10.833)--(6.377,10.832)--(6.595,10.827)--(6.626,10.826)--(6.657,10.818)--(6.751,10.800)%
-  --(6.844,10.780)--(6.875,10.780)--(6.906,10.777)--(6.937,10.769)--(7.000,10.760)--(7.093,10.757)%
-  --(7.217,10.728)--(7.279,10.727)--(7.497,10.714)--(7.559,10.705)--(7.715,10.692)--(8.151,10.690)%
-  --(8.182,10.671)--(8.368,10.666)--(8.399,10.659)--(8.462,10.392)--(8.586,10.381)--(8.648,10.374)%
-  --(8.804,10.360)--(8.804,10.349)--(8.897,10.332)--(8.928,10.332)--(9.084,10.323)--(9.177,10.312)%
-  --(9.239,10.309)--(9.426,10.302)--(9.550,10.301)--(9.706,10.298)--(9.737,10.298)--(9.737,10.292)%
-  --(9.861,10.285)--(9.924,10.285)--(9.955,10.282)--(9.986,10.264)--(10.017,10.257)--(10.048,10.236)%
-  --(10.048,10.214)--(10.390,10.198)--(10.484,10.194)--(10.670,10.186)--(10.888,10.208)--(11.168,10.206)%
-  --(11.635,10.205)--(11.759,10.188)--(11.946,10.184)--(12.101,10.161)--(12.226,10.132)--(12.226,10.127)%
-  --(12.443,10.126)--(12.475,10.112)--(12.599,10.096);
+\draw[gp path] (12.383,10.510)--(13.299,10.510);
+\draw[gp path] (2.424,2.077)--(2.424,2.116)--(2.451,2.119)--(2.451,2.140)--(2.451,2.149)%
+  --(2.451,2.167)--(2.451,2.159)--(2.451,2.176)--(2.451,2.201)--(2.478,2.203)--(2.478,2.209)%
+  --(2.478,2.211)--(2.478,2.209)--(2.478,2.241)--(2.478,2.239)--(2.504,2.272)--(2.504,2.284)%
+  --(2.504,2.281)--(2.504,2.285)--(2.504,2.316)--(2.504,2.327)--(2.504,2.322)--(2.531,2.326)%
+  --(2.531,2.319)--(2.531,2.328)--(2.531,2.339)--(2.531,2.350)--(2.558,2.351)--(2.558,2.360)%
+  --(2.558,2.354)--(2.558,2.357)--(2.558,2.363)--(2.558,2.358)--(2.585,2.364)--(2.585,2.379)%
+  --(2.585,2.380)--(2.585,2.360)--(2.585,2.361)--(2.585,2.354)--(2.585,2.351)--(2.611,2.353)%
+  --(2.611,2.358)--(2.611,2.357)--(2.638,2.372)--(2.638,2.373)--(2.638,2.376)--(2.638,2.366)%
+  --(2.638,2.356)--(2.638,2.353)--(2.665,2.360)--(2.665,2.366)--(2.665,2.371)--(2.692,2.365)%
+  --(2.692,2.367)--(2.692,2.365)--(2.692,2.368)--(2.718,2.357)--(2.718,2.368)--(2.745,2.371)%
+  --(2.745,2.361)--(2.745,2.365)--(2.745,2.368)--(2.772,2.370)--(2.772,2.377)--(2.772,2.385)%
+  --(2.772,2.380)--(2.772,2.379)--(2.799,2.383)--(2.799,2.378)--(2.799,2.376)--(2.826,2.374)%
+  --(2.826,2.376)--(2.826,2.372)--(2.826,2.377)--(2.852,2.371)--(2.852,2.367)--(2.879,2.365)%
+  --(2.879,2.355)--(2.879,2.349)--(2.879,2.353)--(2.879,2.347)--(2.879,2.358)--(2.906,2.357)%
+  --(2.906,2.361)--(2.906,2.373)--(2.933,2.372)--(2.933,2.368)--(2.933,2.367)--(2.933,2.362)%
+  --(2.986,2.366)--(2.986,2.379)--(3.013,2.382)--(3.013,2.387)--(3.040,2.393)--(3.040,2.391)%
+  --(3.040,2.395)--(3.040,2.400)--(3.066,2.396)--(3.066,2.391)--(3.093,2.404)--(3.093,2.401)%
+  --(3.120,2.408)--(3.120,2.407)--(3.147,2.403)--(3.147,2.402)--(3.147,2.400)--(3.147,2.407)%
+  --(3.147,2.410)--(3.174,2.403)--(3.200,2.403)--(3.200,2.425)--(3.200,2.419)--(3.200,2.421)%
+  --(3.200,2.419)--(3.281,2.422)--(3.281,2.420)--(3.281,2.413)--(3.307,2.411)--(3.307,2.407)%
+  --(3.307,2.409)--(3.334,2.410)--(3.334,2.408)--(3.334,2.403)--(3.334,2.417)--(3.334,2.413)%
+  --(3.361,2.420)--(3.388,2.422)--(3.388,2.420)--(3.441,2.413)--(3.522,2.420)--(3.548,2.421)%
+  --(3.548,2.416)--(3.736,2.422)--(3.762,2.416)--(3.762,2.405)--(3.816,2.403)--(3.977,2.404)%
+  --(3.977,2.402)--(4.003,2.402)--(4.110,3.398)--(4.137,3.395)--(4.137,3.407)--(4.164,3.405)%
+  --(4.191,3.402)--(4.244,3.400)--(4.244,3.399)--(4.271,3.398)--(4.298,3.389)--(4.298,3.375)%
+  --(4.325,3.387)--(4.351,3.386)--(4.351,3.385)--(4.458,3.384)--(4.458,3.378)--(4.539,3.378)%
+  --(4.592,3.380)--(4.646,3.376)--(4.646,3.381)--(4.753,3.381)--(4.806,3.377)--(4.806,3.375)%
+  --(4.887,3.376)--(5.074,3.377)--(5.128,3.374)--(5.502,3.371)--(5.556,3.386)--(5.636,3.384)%
+  --(5.663,3.385)--(5.690,3.388)--(5.743,4.792)--(5.931,4.786)--(5.931,4.793)--(6.091,4.793)%
+  --(6.118,4.791)--(6.172,4.788)--(6.279,4.788)--(6.306,4.786)--(6.466,4.790)--(6.520,4.790)%
+  --(6.546,4.785)--(6.546,4.782)--(6.734,4.768)--(6.761,4.764)--(6.841,4.759)--(7.055,4.772)%
+  --(7.189,4.770)--(7.216,4.768)--(7.323,4.758)--(7.323,4.757)--(7.376,5.509)--(7.510,5.506)%
+  --(7.510,5.503)--(7.778,5.498)--(8.179,5.496)--(8.313,5.493)--(8.634,5.500)--(9.732,8.337)%
+  --(9.919,8.341)--(10.026,8.346)--(10.133,8.346)--(10.187,8.345)--(10.348,8.337)--(10.562,10.992)%
+  --(10.642,10.988)--(10.990,10.985)--(11.017,10.983)--(11.499,10.979)--(11.579,10.977)--(11.633,10.977)%
+  --(11.740,10.975)--(12.141,10.972);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (11.131,15.764) {Strategic Urgency};
+\node[gp node right] at (12.199,9.740) {Strategic Resource Penalty};
 \gpcolor{rgb color={0.184,0.243,0.918}}
-\draw[gp path] (11.315,15.764)--(12.231,15.764);
-\draw[gp path] (1.400,9.172)--(1.400,9.164)--(1.400,9.181)--(1.431,9.188)--(1.431,9.192)%
-  --(1.431,9.204)--(1.431,9.245)--(1.431,9.247)--(1.431,9.254)--(1.462,9.254)--(1.462,9.253)%
-  --(1.462,9.257)--(1.462,9.266)--(1.462,9.267)--(1.462,9.256)--(1.493,9.266)--(1.493,9.262)%
-  --(1.493,9.266)--(1.493,9.282)--(1.493,9.293)--(1.493,9.312)--(1.524,9.307)--(1.524,9.306)%
-  --(1.524,9.326)--(1.524,9.325)--(1.524,9.328)--(1.524,9.336)--(1.524,9.338)--(1.556,9.351)%
-  --(1.556,9.348)--(1.556,9.355)--(1.556,9.410)--(1.587,9.403)--(1.587,9.391)--(1.587,9.389)%
-  --(1.618,9.399)--(1.618,9.414)--(1.618,9.410)--(1.649,9.412)--(1.649,9.403)--(1.649,9.404)%
-  --(1.680,9.412)--(1.680,9.420)--(1.680,9.425)--(1.680,9.430)--(1.680,9.431)--(1.680,9.448)%
-  --(1.711,9.453)--(1.711,9.442)--(1.773,9.441)--(1.773,9.448)--(1.804,9.449)--(1.804,9.461)%
-  --(1.804,9.470)--(1.804,9.472)--(1.836,9.472)--(1.836,9.475)--(1.867,9.473)--(1.867,9.483)%
-  --(1.867,9.485)--(1.929,9.472)--(1.960,9.478)--(1.991,9.478)--(1.991,9.481)--(2.022,9.482)%
-  --(2.053,9.485)--(2.053,9.494)--(2.084,9.490)--(2.084,9.484)--(2.084,9.489)--(2.115,9.486)%
-  --(2.115,9.484)--(2.147,9.483)--(2.178,9.478)--(2.178,9.470)--(2.209,9.470)--(2.240,9.464)%
-  --(2.271,9.464)--(2.302,9.461)--(2.302,9.468)--(2.333,9.468)--(2.395,9.469)--(2.427,9.470)%
-  --(2.427,9.463)--(2.458,9.462)--(2.458,9.457)--(2.613,9.458)--(2.675,9.457)--(2.893,9.459)%
-  --(3.049,9.459)--(3.235,9.460)--(3.391,10.237)--(3.422,10.230)--(3.422,10.232)--(3.422,10.231)%
-  --(3.546,10.232)--(3.578,10.235)--(3.609,10.243)--(3.640,10.241)--(3.702,10.242)--(3.764,10.241)%
-  --(3.920,10.241)--(3.982,10.248)--(4.044,10.246)--(4.138,10.240)--(4.324,10.240)--(4.386,10.239)%
-  --(4.418,10.238)--(4.480,10.254)--(4.511,10.249)--(4.511,10.245)--(4.511,10.242)--(4.635,10.244)%
-  --(4.666,10.243)--(5.071,10.241)--(5.102,10.238)--(5.257,11.356)--(5.382,11.361)--(5.382,11.369)%
-  --(5.475,11.366)--(5.569,11.363)--(5.662,11.362)--(5.973,11.365)--(6.004,11.364)--(6.066,11.366)%
-  --(6.315,11.358)--(6.315,11.356)--(6.346,11.359)--(6.377,11.360)--(6.595,11.359)--(6.626,11.361)%
-  --(6.657,11.367)--(6.751,11.361)--(6.844,11.364)--(6.875,11.365)--(6.906,11.362)--(6.937,11.372)%
-  --(7.000,11.370)--(7.093,11.955)--(7.217,11.950)--(7.279,11.955)--(7.497,11.951)--(7.559,11.955)%
-  --(7.715,11.956)--(8.151,11.958)--(8.182,11.962)--(8.368,11.973)--(8.399,11.967)--(8.462,11.966)%
-  --(8.586,11.968)--(8.648,11.966)--(8.804,11.963)--(8.804,11.967)--(8.897,11.966)--(8.928,11.967)%
-  --(9.084,14.199)--(9.177,14.200)--(9.239,14.198)--(9.426,14.201)--(9.550,14.199)--(9.706,14.210)%
-  --(9.737,14.212)--(9.737,14.223)--(9.861,14.229)--(9.924,14.236)--(9.955,14.228)--(9.986,14.231)%
-  --(10.017,14.238)--(10.048,14.235)--(10.048,14.242)--(10.390,14.242)--(10.484,14.237)--(10.670,14.237)%
-  --(10.888,16.330)--(11.168,16.339)--(11.635,16.337)--(11.759,16.339)--(11.946,16.338)--(12.101,16.334)%
-  --(12.226,16.332)--(12.443,16.325)--(12.475,16.324)--(12.599,16.324);
+\draw[gp path] (12.383,9.740)--(13.299,9.740);
+\draw[gp path] (2.424,10.698)--(2.424,10.386)--(2.451,10.248)--(2.451,9.925)--(2.451,9.742)%
+  --(2.451,9.554)--(2.451,9.332)--(2.451,9.172)--(2.451,8.895)--(2.478,8.721)--(2.478,8.594)%
+  --(2.478,8.524)--(2.478,8.419)--(2.478,8.240)--(2.478,8.153)--(2.504,8.027)--(2.504,7.857)%
+  --(2.504,7.763)--(2.504,7.712)--(2.504,7.566)--(2.504,7.361)--(2.504,7.171)--(2.531,7.106)%
+  --(2.531,7.034)--(2.531,6.894)--(2.531,6.634)--(2.531,6.473)--(2.531,6.381)--(2.558,6.325)%
+  --(2.558,6.233)--(2.558,6.166)--(2.558,6.050)--(2.558,6.039)--(2.558,6.026)--(2.558,6.008)%
+  --(2.585,5.995)--(2.585,5.956)--(2.585,5.897)--(2.585,5.862)--(2.585,5.795)--(2.585,5.685)%
+  --(2.585,5.655)--(2.611,5.603)--(2.611,5.583)--(2.611,5.476)--(2.638,5.393)--(2.638,5.354)%
+  --(2.638,5.332)--(2.638,5.328)--(2.638,5.312)--(2.638,5.271)--(2.638,5.183)--(2.665,5.070)%
+  --(2.665,5.064)--(2.665,5.048)--(2.692,4.948)--(2.692,4.924)--(2.692,4.895)--(2.692,4.808)%
+  --(2.718,4.808)--(2.718,4.546)--(2.745,4.538)--(2.745,4.522)--(2.745,4.448)--(2.745,4.444)%
+  --(2.772,4.424)--(2.772,4.392)--(2.772,4.387)--(2.772,4.383)--(2.772,4.049)--(2.799,4.042)%
+  --(2.799,4.018)--(2.826,4.003)--(2.826,3.985)--(2.826,3.973)--(2.852,3.961)--(2.879,3.961)%
+  --(2.879,3.944)--(2.879,3.916)--(2.879,3.901)--(2.879,3.859)--(2.906,3.859)--(2.906,3.837)%
+  --(2.906,3.829)--(2.933,3.804)--(2.933,3.800)--(2.933,3.785)--(2.986,3.778)--(2.986,3.767)%
+  --(3.013,3.752)--(3.013,3.746)--(3.040,3.691)--(3.040,3.689)--(3.040,3.676)--(3.066,3.660)%
+  --(3.066,3.658)--(3.066,3.654)--(3.093,3.650)--(3.120,3.591)--(3.147,3.569)--(3.147,3.545)%
+  --(3.147,3.484)--(3.147,3.469)--(3.174,3.466)--(3.200,3.451)--(3.200,3.449)--(3.200,3.434)%
+  --(3.200,3.421)--(3.281,3.421)--(3.281,3.409)--(3.307,3.399)--(3.307,3.361)--(3.334,3.361)%
+  --(3.334,3.359)--(3.334,3.355)--(3.361,3.006)--(3.388,3.004)--(3.441,3.004)--(3.522,2.986)%
+  --(3.548,2.975)--(3.548,2.971)--(3.736,2.960)--(3.762,2.953)--(3.762,2.949)--(3.816,2.949)%
+  --(3.977,2.949)--(3.977,2.940)--(4.003,2.940)--(4.110,2.940)--(4.137,2.930)--(4.137,2.929)%
+  --(4.164,2.929)--(4.191,2.929)--(4.244,2.910)--(4.271,2.910)--(4.298,2.910)--(4.325,2.908)%
+  --(4.351,2.908)--(4.351,2.875)--(4.458,2.875)--(4.458,2.864)--(4.539,2.864)--(4.592,2.860)%
+  --(4.646,2.857)--(4.646,2.847)--(4.753,2.847)--(4.806,2.847)--(4.887,2.847)--(5.074,2.825)%
+  --(5.128,2.823)--(5.502,2.823)--(5.556,2.810)--(5.636,2.810)--(5.663,2.770)--(5.690,2.766)%
+  --(5.743,2.766)--(5.931,2.766)--(5.931,2.751)--(6.091,2.733)--(6.118,2.733)--(6.172,2.733)%
+  --(6.279,2.733)--(6.306,2.733)--(6.466,2.724)--(6.520,2.724)--(6.546,2.718)--(6.734,2.718)%
+  --(6.761,2.718)--(6.841,2.718)--(7.055,2.713)--(7.189,2.713)--(7.216,2.713)--(7.323,2.713)%
+  --(7.376,2.713)--(7.510,2.713)--(7.778,2.713)--(8.179,2.713)--(8.313,2.713)--(8.634,2.709)%
+  --(9.732,2.703)--(9.919,2.702)--(10.026,2.698)--(10.133,2.698)--(10.187,2.698)--(10.348,2.698)%
+  --(10.562,2.694)--(10.642,2.694)--(10.990,2.694)--(11.017,2.694)--(11.499,2.694)--(11.579,2.694)%
+  --(11.633,2.694)--(11.740,2.694)--(12.141,2.694);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (1.400,17.099)--(1.400,9.000)--(12.599,9.000)--(12.599,17.099)--cycle;
-\node[gp node center,rotate=-270] at (-1.836,13.049) {Strategic Objective Value};
-\node[gp node center,rotate=-270] at (15.697,13.049) {Strategic Urgency};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.628,6.460) {Strategic Urgency [Weighted Tardiness]};
+\node[gp node center,rotate=-270] at (16.213,6.460) {Strategic Resource Penalty [Hours]};
+\node[gp node center] at (8.045,0.215) {Relative time ($\tau$) [Seconds]};
+\node[gp node center] at (8.045,11.537) {Objective Values for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{1.400cm}{9.000cm}}{\pgfpoint{12.599cm}{17.099cm}}
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,0.000)--(12.599,0.000);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,0.000)--(1.580,0.000);
-\node[gp node right] at (1.216,-0.308) {$164000$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,0.900)--(12.599,0.900);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,0.900)--(1.580,0.900);
-\node[gp node right] at (1.216,0.592) {$164500$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,1.800)--(12.599,1.800);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,1.800)--(1.580,1.800);
-\node[gp node right] at (1.216,1.492) {$165000$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,2.700)--(12.599,2.700);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,2.700)--(1.580,2.700);
-\node[gp node right] at (1.216,2.392) {$165500$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,3.600)--(12.599,3.600);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,3.600)--(1.580,3.600);
-\node[gp node right] at (1.216,3.292) {$166000$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,4.499)--(12.599,4.499);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,4.499)--(1.580,4.499);
-\node[gp node right] at (1.216,4.191) {$166500$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,5.399)--(12.599,5.399);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,5.399)--(1.580,5.399);
-\node[gp node right] at (1.216,5.091) {$167000$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,6.299)--(12.599,6.299);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,6.299)--(1.580,6.299);
-\node[gp node right] at (1.216,5.991) {$167500$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,7.199)--(5.979,7.199);
-\draw[gp path] (12.415,7.199)--(12.599,7.199);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,7.199)--(1.580,7.199);
-\node[gp node right] at (1.216,6.891) {$168000$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,8.099)--(12.599,8.099);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,8.099)--(1.580,8.099);
-\node[gp node right] at (1.216,7.791) {$168500$};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (1.400,0.000)--(1.400,8.099);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,0.000)--(1.400,0.180);
-\draw[gp path] (1.400,8.099)--(1.400,7.919);
-\node[gp node left,rotate=270] at (1.400,-0.184) {0};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (3.267,0.000)--(3.267,8.099);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (3.267,0.000)--(3.267,0.180);
-\draw[gp path] (3.267,8.099)--(3.267,7.919);
-\node[gp node left,rotate=270] at (3.267,-0.184) {60};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (5.133,0.000)--(5.133,8.099);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (5.133,0.000)--(5.133,0.180);
-\draw[gp path] (5.133,8.099)--(5.133,7.919);
-\node[gp node left,rotate=270] at (5.133,-0.184) {120};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (7.000,0.000)--(7.000,6.379);
-\draw[gp path] (7.000,7.919)--(7.000,8.099);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (7.000,0.000)--(7.000,0.180);
-\draw[gp path] (7.000,8.099)--(7.000,7.919);
-\node[gp node left,rotate=270] at (7.000,-0.184) {180};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (8.866,0.000)--(8.866,6.379);
-\draw[gp path] (8.866,7.919)--(8.866,8.099);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (8.866,0.000)--(8.866,0.180);
-\draw[gp path] (8.866,8.099)--(8.866,7.919);
-\node[gp node left,rotate=270] at (8.866,-0.184) {240};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (10.733,0.000)--(10.733,6.379);
-\draw[gp path] (10.733,7.919)--(10.733,8.099);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (10.733,0.000)--(10.733,0.180);
-\draw[gp path] (10.733,8.099)--(10.733,7.919);
-\node[gp node left,rotate=270] at (10.733,-0.184) {300};
-\gpcolor{rgb color={0.753,0.753,0.753}}
-\gpsetlinewidth{2.00}
-\draw[gp path] (12.599,0.000)--(12.599,8.099);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (12.599,0.000)--(12.599,0.180);
-\draw[gp path] (12.599,8.099)--(12.599,7.919);
-\node[gp node left,rotate=270] at (12.599,-0.184) {360};
-\draw[gp path] (12.599,0.000)--(12.419,0.000);
-\node[gp node left] at (12.783,-0.308) {$4.4\times10^{6}$};
-\draw[gp path] (12.599,0.900)--(12.419,0.900);
-\node[gp node left] at (12.783,0.592) {$4.6\times10^{6}$};
-\draw[gp path] (12.599,1.800)--(12.419,1.800);
-\node[gp node left] at (12.783,1.492) {$4.8\times10^{6}$};
-\draw[gp path] (12.599,2.700)--(12.419,2.700);
-\node[gp node left] at (12.783,2.392) {$5\times10^{6}$};
-\draw[gp path] (12.599,3.600)--(12.419,3.600);
-\node[gp node left] at (12.783,3.292) {$5.2\times10^{6}$};
-\draw[gp path] (12.599,4.499)--(12.419,4.499);
-\node[gp node left] at (12.783,4.191) {$5.4\times10^{6}$};
-\draw[gp path] (12.599,5.399)--(12.419,5.399);
-\node[gp node left] at (12.783,5.091) {$5.6\times10^{6}$};
-\draw[gp path] (12.599,6.299)--(12.419,6.299);
-\node[gp node left] at (12.783,5.991) {$5.8\times10^{6}$};
-\draw[gp path] (12.599,7.199)--(12.419,7.199);
-\node[gp node left] at (12.783,6.891) {$6\times10^{6}$};
-\draw[gp path] (12.599,8.099)--(12.419,8.099);
-\node[gp node left] at (12.783,7.791) {$6.2\times10^{6}$};
-\draw[gp path] (1.400,8.099)--(1.400,0.000)--(12.599,0.000)--(12.599,8.099)--cycle;
-\draw[gp path] (5.979,6.379)--(5.979,7.919)--(12.415,7.919)--(12.415,6.379)--cycle;
-\node[gp node right] at (11.131,7.534) {Strategic Resource Penalty};
-\gpcolor{rgb color={0.000,0.533,0.208}}
-\gpsetlinewidth{2.50}
-\draw[gp path] (11.315,7.534)--(12.231,7.534);
-\draw[gp path] (1.400,7.716)--(1.400,7.552)--(1.400,7.206)--(1.431,6.895)--(1.431,6.749)%
-  --(1.431,6.697)--(1.431,6.506)--(1.431,6.324)--(1.431,6.157)--(1.431,5.986)--(1.462,5.950)%
-  --(1.462,5.811)--(1.462,5.770)--(1.462,5.624)--(1.462,5.576)--(1.462,5.502)--(1.462,5.385)%
-  --(1.493,5.290)--(1.493,5.182)--(1.493,5.072)--(1.493,4.978)--(1.493,4.894)--(1.493,4.724)%
-  --(1.524,4.660)--(1.524,4.625)--(1.524,4.559)--(1.524,4.444)--(1.524,4.345)--(1.524,4.280)%
-  --(1.524,4.098)--(1.556,4.058)--(1.556,3.990)--(1.556,3.857)--(1.556,3.799)--(1.587,3.639)%
-  --(1.587,3.565)--(1.587,3.511)--(1.618,3.387)--(1.618,3.315)--(1.618,3.333)--(1.649,3.283)%
-  --(1.649,3.234)--(1.649,3.114)--(1.649,3.076)--(1.680,3.054)--(1.680,3.011)--(1.680,2.928)%
-  --(1.680,2.809)--(1.680,2.755)--(1.680,2.556)--(1.680,2.449)--(1.711,2.406)--(1.711,2.367)%
-  --(1.773,2.343)--(1.773,2.318)--(1.804,2.216)--(1.804,2.153)--(1.804,2.118)--(1.804,2.090)%
-  --(1.836,2.088)--(1.836,2.099)--(1.867,2.061)--(1.867,2.021)--(1.867,1.980)--(1.929,1.953)%
-  --(1.960,1.906)--(1.991,1.857)--(1.991,1.717)--(2.022,1.681)--(2.022,1.652)--(2.053,1.569)%
-  --(2.053,1.573)--(2.084,1.533)--(2.084,1.517)--(2.115,1.463)--(2.115,1.452)--(2.147,1.452)%
-  --(2.178,1.445)--(2.178,1.454)--(2.209,1.436)--(2.240,1.436)--(2.240,1.379)--(2.271,1.373)%
-  --(2.302,1.335)--(2.333,1.296)--(2.333,1.298)--(2.333,1.253)--(2.395,1.258)--(2.427,0.869)%
-  --(2.427,0.853)--(2.458,0.805)--(2.458,0.785)--(2.613,0.765)--(2.675,0.747)--(2.893,0.781)%
-  --(3.049,0.776)--(3.235,0.783)--(3.391,0.792)--(3.422,0.803)--(3.422,0.778)--(3.422,0.751)%
-  --(3.546,0.761)--(3.578,0.769)--(3.609,0.779)--(3.640,0.743)--(3.702,0.729)--(3.764,0.729)%
-  --(3.920,0.740)--(3.920,0.682)--(3.982,0.661)--(4.044,0.641)--(4.138,0.612)--(4.324,0.617)%
-  --(4.386,0.617)--(4.418,0.635)--(4.480,0.500)--(4.511,0.490)--(4.511,0.481)--(4.511,0.479)%
-  --(4.635,0.470)--(4.666,0.436)--(5.071,0.428)--(5.102,0.428)--(5.257,0.437)--(5.382,0.430)%
-  --(5.382,0.445)--(5.475,0.425)--(5.569,0.436)--(5.662,0.446)--(5.973,0.446)--(6.004,0.446)%
-  --(6.066,0.452)--(6.315,0.468)--(6.315,0.452)--(6.346,0.452)--(6.377,0.466)--(6.595,0.452)%
-  --(6.626,0.448)--(6.657,0.448)--(6.751,0.448)--(6.844,0.452)--(6.875,0.454)--(6.906,0.454)%
-  --(6.937,0.461)--(7.000,0.425)--(7.093,0.430)--(7.217,0.441)--(7.279,0.455)--(7.497,0.446)%
-  --(7.559,0.439)--(7.715,0.425)--(8.151,0.450)--(8.182,0.434)--(8.368,0.448)--(8.399,0.441)%
-  --(8.462,0.184)--(8.586,0.175)--(8.648,0.166)--(8.804,0.166)--(8.804,0.169)--(8.897,0.169)%
-  --(8.928,0.155)--(9.084,0.124)--(9.177,0.128)--(9.239,0.121)--(9.426,0.130)--(9.550,0.144)%
-  --(9.706,0.122)--(9.737,0.153)--(9.737,0.167)--(9.861,0.191)--(9.924,0.187)--(9.955,0.216)%
-  --(9.986,0.196)--(10.017,0.191)--(10.048,0.173)--(10.048,0.187)--(10.390,0.194)--(10.484,0.194)%
-  --(10.670,0.205)--(10.888,0.196)--(11.168,0.196)--(11.635,0.196)--(11.759,0.196)--(11.946,0.189)%
-  --(12.101,0.157)--(12.226,0.133)--(12.226,0.128)--(12.443,0.128)--(12.475,0.130)--(12.599,0.137);
-\gpcolor{color=gp lt color border}
-\node[gp node right] at (11.131,6.764) {Strategic Clustering Value};
-\gpcolor{rgb color={0.475,0.137,0.557}}
-\draw[gp path] (11.315,6.764)--(12.231,6.764);
-\draw[gp path] (1.400,7.335)--(1.400,7.011)--(1.400,6.864)--(1.431,6.576)--(1.431,6.402)%
-  --(1.431,6.302)--(1.431,6.123)--(1.431,5.892)--(1.431,5.614)--(1.431,5.430)--(1.462,5.359)%
-  --(1.462,5.136)--(1.462,5.089)--(1.462,4.904)--(1.462,4.846)--(1.462,4.794)--(1.462,4.660)%
-  --(1.493,4.576)--(1.493,4.535)--(1.493,4.430)--(1.493,4.247)--(1.493,4.198)--(1.493,4.097)%
-  --(1.524,3.960)--(1.524,3.926)--(1.524,3.847)--(1.524,3.750)--(1.524,3.613)--(1.524,3.488)%
-  --(1.524,3.242)--(1.556,3.196)--(1.556,3.180)--(1.556,3.053)--(1.556,2.919)--(1.587,2.750)%
-  --(1.587,2.759)--(1.587,2.648)--(1.587,2.569)--(1.618,2.318)--(1.618,2.317)--(1.618,2.368)%
-  --(1.649,2.244)--(1.649,2.165)--(1.649,2.043)--(1.649,2.082)--(1.680,2.040)--(1.680,1.961)%
-  --(1.680,1.885)--(1.680,1.768)--(1.680,1.655)--(1.680,1.601)--(1.680,1.516)--(1.711,1.425)%
-  --(1.711,1.350)--(1.773,1.341)--(1.773,1.309)--(1.804,1.296)--(1.804,1.284)--(1.804,1.281)%
-  --(1.804,1.286)--(1.836,1.298)--(1.836,1.334)--(1.867,1.302)--(1.867,1.207)--(1.867,1.178)%
-  --(1.929,1.146)--(1.960,1.150)--(1.991,1.074)--(1.991,1.008)--(2.022,0.922)--(2.022,0.915)%
-  --(2.053,0.785)--(2.053,0.826)--(2.084,0.745)--(2.084,0.736)--(2.084,0.744)--(2.115,0.653)%
-  --(2.115,0.683)--(2.147,0.690)--(2.178,0.693)--(2.178,0.717)--(2.209,0.682)--(2.240,0.686)%
-  --(2.240,0.679)--(2.271,0.683)--(2.302,0.619)--(2.302,0.632)--(2.333,0.568)--(2.333,0.604)%
-  --(2.333,0.573)--(2.395,0.610)--(2.427,0.610)--(2.427,0.578)--(2.458,0.512)--(2.458,0.478)%
-  --(2.613,0.430)--(2.675,0.390)--(2.893,0.496)--(3.049,0.496)--(3.235,0.529)--(3.391,0.567)%
-  --(3.422,0.606)--(3.422,0.617)--(3.422,0.551)--(3.546,0.582)--(3.578,0.615)--(3.609,0.650)%
-  --(3.640,0.585)--(3.702,0.580)--(3.764,0.585)--(3.920,0.630)--(3.920,0.511)--(3.982,0.467)%
-  --(4.044,0.425)--(4.138,0.434)--(4.324,0.505)--(4.386,0.510)--(4.418,0.588)--(4.480,0.545)%
-  --(4.511,0.546)--(4.511,0.542)--(4.511,0.574)--(4.635,0.609)--(4.666,0.543)--(5.071,0.592)%
-  --(5.102,0.597)--(5.257,0.634)--(5.382,0.636)--(5.382,0.676)--(5.475,0.636)--(5.569,0.676)%
-  --(5.662,0.709)--(5.973,0.719)--(6.004,0.720)--(6.066,0.744)--(6.315,0.789)--(6.315,0.757)%
-  --(6.346,0.758)--(6.377,0.796)--(6.595,0.769)--(6.626,0.762)--(6.657,0.778)--(6.751,0.814)%
-  --(6.844,0.860)--(6.875,0.866)--(6.906,0.872)--(6.937,0.906)--(7.000,0.833)--(7.093,0.868)%
-  --(7.217,0.951)--(7.279,0.990)--(7.497,0.992)--(7.559,0.992)--(7.715,0.981)--(8.151,1.049)%
-  --(8.182,1.044)--(8.368,1.091)--(8.399,1.086)--(8.462,0.963)--(8.586,0.962)--(8.648,0.952)%
-  --(8.804,0.980)--(8.804,1.010)--(8.897,1.042)--(8.928,1.007)--(9.084,1.009)--(9.177,1.039)%
-  --(9.239,1.027)--(9.426,1.064)--(9.550,1.102)--(9.706,1.053)--(9.737,1.130)--(9.737,1.178)%
-  --(9.861,1.250)--(9.924,1.243)--(9.955,1.320)--(9.986,1.304)--(10.017,1.305)--(10.048,1.301)%
-  --(10.048,1.380)--(10.390,1.430)--(10.484,1.436)--(10.670,1.480)--(10.888,1.472)--(11.168,1.476)%
-  --(11.635,1.479)--(11.759,1.511)--(11.946,1.502)--(12.101,1.465)--(12.226,1.462)--(12.226,1.460)%
-  --(12.443,1.462)--(12.475,1.492)--(12.599,1.542);
-\gpcolor{color=gp lt color border}
-\gpsetlinewidth{1.00}
-\draw[gp path] (1.400,8.099)--(1.400,0.000)--(12.599,0.000)--(12.599,8.099)--cycle;
-\node[gp node center,rotate=-270] at (-1.100,4.049) {Strategic Resource Penalty [Hours]};
-\node[gp node center,rotate=-270] at (15.329,4.049) {Strategic Clustering Value};
-\node[gp node center] at (6.999,-1.629) {Relative time ($\tau$) [S]};
-%% coordinates of the plot area
-\gpdefrectangularnode{gp plot 2}{\pgfpoint{1.400cm}{0.000cm}}{\pgfpoint{12.599cm}{8.099cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{13.667cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
