--- a/papers/actor-based-large-neighborhood-search/tex/discussion.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/discussion.tex
@@ -90,7 +90,7 @@ Figure~\ref{fig:discussion:hexagon-setup} shows one such possible setup.
 	}\label{fig:discussion:hexagon-setup}
 \end{figure}
 
-Scaling metaheuristics is very difficult as metaheuristics are usually high coupled
+Scaling metaheuristics is very difficult as metaheuristics are usually highly coupled
 software components and this high coupling is exactly what enable them to optimize
 a large system of equally coupled and nested decisions. The main contribution of 
 future research will be to provide a shared memory software pattern that can be 
@@ -122,7 +122,7 @@ in a way that was not possible just 10 years ago.
 This also align with anacdotal evidence from practical operation research 
 that smaller ``quick and dirty'' often works better in practice. 
 
-The fundamental problem with the ``older'' paradigm is that optimizing across
+The fundamental problem with the existing paradigm is that optimizing across
 actors/stakeholders is very difficult, leading the literature to prefer
 integrated models instead of decomposing the model by each of the
 processes that make up a business process such as maintenance scheduling.
