--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
@@ -1,141 +1,148 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Fri 10 Jan 2025 11:17:13 AM UTC
+%% Mon 13 Jan 2025 02:42:39 PM UTC
 \tikzset{every node/.append style={scale=1.00}}
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.845)--(13.667,1.845);
+\draw[gp path] (2.240,1.845)--(13.667,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.604,1.845);
-\node[gp node right] at (2.240,2.153) {$9.5\times10^{10}$};
+\draw[gp path] (2.240,1.845)--(2.420,1.845);
+\node[gp node right] at (2.056,2.153) {$9\times10^{10}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,2.871)--(13.667,2.871);
+\draw[gp path] (2.240,2.768)--(13.667,2.768);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.871)--(2.604,2.871);
-\node[gp node right] at (2.240,3.179) {$1\times10^{11}$};
+\draw[gp path] (2.240,2.768)--(2.420,2.768);
+\node[gp node right] at (2.056,3.076) {$1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,3.896)--(13.667,3.896);
+\draw[gp path] (2.240,3.691)--(13.667,3.691);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.896)--(2.604,3.896);
-\node[gp node right] at (2.240,4.204) {$1.05\times10^{11}$};
+\draw[gp path] (2.240,3.691)--(2.420,3.691);
+\node[gp node right] at (2.056,3.999) {$1.1\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.922)--(13.667,4.922);
+\draw[gp path] (2.240,4.614)--(13.667,4.614);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.922)--(2.604,4.922);
-\node[gp node right] at (2.240,5.230) {$1.1\times10^{11}$};
+\draw[gp path] (2.240,4.614)--(2.420,4.614);
+\node[gp node right] at (2.056,4.922) {$1.2\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,5.947)--(13.667,5.947);
+\draw[gp path] (2.240,5.537)--(13.667,5.537);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.947)--(2.604,5.947);
-\node[gp node right] at (2.240,6.255) {$1.15\times10^{11}$};
+\draw[gp path] (2.240,5.537)--(2.420,5.537);
+\node[gp node right] at (2.056,5.845) {$1.3\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,6.973)--(13.667,6.973);
+\draw[gp path] (2.240,6.460)--(13.667,6.460);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.973)--(2.604,6.973);
-\node[gp node right] at (2.240,7.281) {$1.2\times10^{11}$};
+\draw[gp path] (2.240,6.460)--(2.420,6.460);
+\node[gp node right] at (2.056,6.768) {$1.4\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,7.998)--(13.667,7.998);
+\draw[gp path] (2.240,7.383)--(13.667,7.383);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.998)--(2.604,7.998);
-\node[gp node right] at (2.240,8.306) {$1.25\times10^{11}$};
+\draw[gp path] (2.240,7.383)--(2.420,7.383);
+\node[gp node right] at (2.056,7.691) {$1.5\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,9.024)--(13.667,9.024);
+\draw[gp path] (2.240,8.306)--(13.667,8.306);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.024)--(2.604,9.024);
-\node[gp node right] at (2.240,9.332) {$1.3\times10^{11}$};
+\draw[gp path] (2.240,8.306)--(2.420,8.306);
+\node[gp node right] at (2.056,8.614) {$1.6\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.049)--(7.047,10.049);
-\draw[gp path] (13.483,10.049)--(13.667,10.049);
+\draw[gp path] (2.240,9.229)--(13.667,9.229);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.049)--(2.604,10.049);
-\node[gp node right] at (2.240,10.357) {$1.35\times10^{11}$};
+\draw[gp path] (2.240,9.229)--(2.420,9.229);
+\node[gp node right] at (2.056,9.537) {$1.7\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,11.075)--(13.667,11.075);
+\draw[gp path] (2.240,10.152)--(7.047,10.152);
+\draw[gp path] (13.483,10.152)--(13.667,10.152);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.604,11.075);
-\node[gp node right] at (2.240,11.383) {$1.4\times10^{11}$};
+\draw[gp path] (2.240,10.152)--(2.420,10.152);
+\node[gp node right] at (2.056,10.460) {$1.8\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,1.845)--(2.424,11.075);
+\draw[gp path] (2.240,11.075)--(13.667,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,1.845)--(2.424,2.025);
-\draw[gp path] (2.424,11.075)--(2.424,10.895);
-\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
+\draw[gp path] (2.240,11.075)--(2.420,11.075);
+\node[gp node right] at (2.056,11.383) {$1.9\times10^{11}$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (4.030,1.845)--(4.030,11.075);
+\draw[gp path] (2.240,1.845)--(2.240,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.030,1.845)--(4.030,2.025);
-\draw[gp path] (4.030,11.075)--(4.030,10.895);
-\node[gp node left,rotate=270] at (4.030,1.661) {$60$};
+\draw[gp path] (2.240,1.845)--(2.240,2.025);
+\draw[gp path] (2.240,11.075)--(2.240,10.895);
+\node[gp node left,rotate=270] at (2.240,1.661) {$0$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (5.636,1.845)--(5.636,11.075);
+\draw[gp path] (3.872,1.845)--(3.872,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.636,1.845)--(5.636,2.025);
-\draw[gp path] (5.636,11.075)--(5.636,10.895);
-\node[gp node left,rotate=270] at (5.636,1.661) {$120$};
+\draw[gp path] (3.872,1.845)--(3.872,2.025);
+\draw[gp path] (3.872,11.075)--(3.872,10.895);
+\node[gp node left,rotate=270] at (3.872,1.661) {$60$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (7.242,1.845)--(7.242,9.355);
-\draw[gp path] (7.242,10.895)--(7.242,11.075);
+\draw[gp path] (5.505,1.845)--(5.505,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.242,1.845)--(7.242,2.025);
-\draw[gp path] (7.242,11.075)--(7.242,10.895);
-\node[gp node left,rotate=270] at (7.242,1.661) {$180$};
+\draw[gp path] (5.505,1.845)--(5.505,2.025);
+\draw[gp path] (5.505,11.075)--(5.505,10.895);
+\node[gp node left,rotate=270] at (5.505,1.661) {$120$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (8.849,1.845)--(8.849,9.355);
-\draw[gp path] (8.849,10.895)--(8.849,11.075);
+\draw[gp path] (7.137,1.845)--(7.137,9.355);
+\draw[gp path] (7.137,10.895)--(7.137,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.849,1.845)--(8.849,2.025);
-\draw[gp path] (8.849,11.075)--(8.849,10.895);
-\node[gp node left,rotate=270] at (8.849,1.661) {$240$};
+\draw[gp path] (7.137,1.845)--(7.137,2.025);
+\draw[gp path] (7.137,11.075)--(7.137,10.895);
+\node[gp node left,rotate=270] at (7.137,1.661) {$180$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (10.455,1.845)--(10.455,9.355);
-\draw[gp path] (10.455,10.895)--(10.455,11.075);
+\draw[gp path] (8.770,1.845)--(8.770,9.355);
+\draw[gp path] (8.770,10.895)--(8.770,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.455,1.845)--(10.455,2.025);
-\draw[gp path] (10.455,11.075)--(10.455,10.895);
-\node[gp node left,rotate=270] at (10.455,1.661) {$300$};
+\draw[gp path] (8.770,1.845)--(8.770,2.025);
+\draw[gp path] (8.770,11.075)--(8.770,10.895);
+\node[gp node left,rotate=270] at (8.770,1.661) {$240$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (12.061,1.845)--(12.061,9.355);
-\draw[gp path] (12.061,10.895)--(12.061,11.075);
+\draw[gp path] (10.402,1.845)--(10.402,9.355);
+\draw[gp path] (10.402,10.895)--(10.402,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (12.061,1.845)--(12.061,2.025);
-\draw[gp path] (12.061,11.075)--(12.061,10.895);
-\node[gp node left,rotate=270] at (12.061,1.661) {$360$};
+\draw[gp path] (10.402,1.845)--(10.402,2.025);
+\draw[gp path] (10.402,11.075)--(10.402,10.895);
+\node[gp node left,rotate=270] at (10.402,1.661) {$300$};
+\gpcolor{rgb color={0.753,0.753,0.753}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (12.035,1.845)--(12.035,9.355);
+\draw[gp path] (12.035,10.895)--(12.035,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (12.035,1.845)--(12.035,2.025);
+\draw[gp path] (12.035,11.075)--(12.035,10.895);
+\node[gp node left,rotate=270] at (12.035,1.661) {$360$};
 \gpcolor{rgb color={0.753,0.753,0.753}}
 \gpsetlinewidth{2.00}
 \draw[gp path] (13.667,1.845)--(13.667,11.075);
@@ -145,114 +152,208 @@
 \draw[gp path] (13.667,11.075)--(13.667,10.895);
 \node[gp node left,rotate=270] at (13.667,1.661) {$420$};
 \draw[gp path] (13.667,1.845)--(13.487,1.845);
-\node[gp node left] at (13.851,2.153) {$164000$};
-\draw[gp path] (13.667,2.768)--(13.487,2.768);
-\node[gp node left] at (13.851,3.076) {$164500$};
-\draw[gp path] (13.667,3.691)--(13.487,3.691);
-\node[gp node left] at (13.851,3.999) {$165000$};
-\draw[gp path] (13.667,4.614)--(13.487,4.614);
-\node[gp node left] at (13.851,4.922) {$165500$};
-\draw[gp path] (13.667,5.537)--(13.487,5.537);
-\node[gp node left] at (13.851,5.845) {$166000$};
+\node[gp node left] at (13.851,2.153) {$163000$};
+\draw[gp path] (13.667,3.383)--(13.487,3.383);
+\node[gp node left] at (13.851,3.691) {$164000$};
+\draw[gp path] (13.667,4.922)--(13.487,4.922);
+\node[gp node left] at (13.851,5.230) {$165000$};
 \draw[gp path] (13.667,6.460)--(13.487,6.460);
-\node[gp node left] at (13.851,6.768) {$166500$};
-\draw[gp path] (13.667,7.383)--(13.487,7.383);
-\node[gp node left] at (13.851,7.691) {$167000$};
-\draw[gp path] (13.667,8.306)--(13.487,8.306);
-\node[gp node left] at (13.851,8.614) {$167500$};
-\draw[gp path] (13.667,9.229)--(13.487,9.229);
-\node[gp node left] at (13.851,9.537) {$168000$};
-\draw[gp path] (13.667,10.152)--(13.487,10.152);
-\node[gp node left] at (13.851,10.460) {$168500$};
+\node[gp node left] at (13.851,6.768) {$166000$};
+\draw[gp path] (13.667,7.998)--(13.487,7.998);
+\node[gp node left] at (13.851,8.306) {$167000$};
+\draw[gp path] (13.667,9.537)--(13.487,9.537);
+\node[gp node left] at (13.851,9.845) {$168000$};
 \draw[gp path] (13.667,11.075)--(13.487,11.075);
 \node[gp node left] at (13.851,11.383) {$169000$};
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
+\draw[gp path] (2.240,11.075)--(2.240,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
 \draw[gp path] (7.047,9.355)--(7.047,10.895)--(13.483,10.895)--(13.483,9.355)--cycle;
 \node[gp node right] at (12.199,10.510) {Strategic Urgency};
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.50}
 \draw[gp path] (12.383,10.510)--(13.299,10.510);
-\draw[gp path] (2.424,2.077)--(2.424,2.116)--(2.451,2.119)--(2.451,2.140)--(2.451,2.149)%
-  --(2.451,2.167)--(2.451,2.159)--(2.451,2.176)--(2.451,2.201)--(2.478,2.203)--(2.478,2.209)%
-  --(2.478,2.211)--(2.478,2.209)--(2.478,2.241)--(2.478,2.239)--(2.504,2.272)--(2.504,2.284)%
-  --(2.504,2.281)--(2.504,2.285)--(2.504,2.316)--(2.504,2.327)--(2.504,2.322)--(2.531,2.326)%
-  --(2.531,2.319)--(2.531,2.328)--(2.531,2.339)--(2.531,2.350)--(2.558,2.351)--(2.558,2.360)%
-  --(2.558,2.354)--(2.558,2.357)--(2.558,2.363)--(2.558,2.358)--(2.585,2.364)--(2.585,2.379)%
-  --(2.585,2.380)--(2.585,2.360)--(2.585,2.361)--(2.585,2.354)--(2.585,2.351)--(2.611,2.353)%
-  --(2.611,2.358)--(2.611,2.357)--(2.638,2.372)--(2.638,2.373)--(2.638,2.376)--(2.638,2.366)%
-  --(2.638,2.356)--(2.638,2.353)--(2.665,2.360)--(2.665,2.366)--(2.665,2.371)--(2.692,2.365)%
-  --(2.692,2.367)--(2.692,2.365)--(2.692,2.368)--(2.718,2.357)--(2.718,2.368)--(2.745,2.371)%
-  --(2.745,2.361)--(2.745,2.365)--(2.745,2.368)--(2.772,2.370)--(2.772,2.377)--(2.772,2.385)%
-  --(2.772,2.380)--(2.772,2.379)--(2.799,2.383)--(2.799,2.378)--(2.799,2.376)--(2.826,2.374)%
-  --(2.826,2.376)--(2.826,2.372)--(2.826,2.377)--(2.852,2.371)--(2.852,2.367)--(2.879,2.365)%
-  --(2.879,2.355)--(2.879,2.349)--(2.879,2.353)--(2.879,2.347)--(2.879,2.358)--(2.906,2.357)%
-  --(2.906,2.361)--(2.906,2.373)--(2.933,2.372)--(2.933,2.368)--(2.933,2.367)--(2.933,2.362)%
-  --(2.986,2.366)--(2.986,2.379)--(3.013,2.382)--(3.013,2.387)--(3.040,2.393)--(3.040,2.391)%
-  --(3.040,2.395)--(3.040,2.400)--(3.066,2.396)--(3.066,2.391)--(3.093,2.404)--(3.093,2.401)%
-  --(3.120,2.408)--(3.120,2.407)--(3.147,2.403)--(3.147,2.402)--(3.147,2.400)--(3.147,2.407)%
-  --(3.147,2.410)--(3.174,2.403)--(3.200,2.403)--(3.200,2.425)--(3.200,2.419)--(3.200,2.421)%
-  --(3.200,2.419)--(3.281,2.422)--(3.281,2.420)--(3.281,2.413)--(3.307,2.411)--(3.307,2.407)%
-  --(3.307,2.409)--(3.334,2.410)--(3.334,2.408)--(3.334,2.403)--(3.334,2.417)--(3.334,2.413)%
-  --(3.361,2.420)--(3.388,2.422)--(3.388,2.420)--(3.441,2.413)--(3.522,2.420)--(3.548,2.421)%
-  --(3.548,2.416)--(3.736,2.422)--(3.762,2.416)--(3.762,2.405)--(3.816,2.403)--(3.977,2.404)%
-  --(3.977,2.402)--(4.003,2.402)--(4.110,3.398)--(4.137,3.395)--(4.137,3.407)--(4.164,3.405)%
-  --(4.191,3.402)--(4.244,3.400)--(4.244,3.399)--(4.271,3.398)--(4.298,3.389)--(4.298,3.375)%
-  --(4.325,3.387)--(4.351,3.386)--(4.351,3.385)--(4.458,3.384)--(4.458,3.378)--(4.539,3.378)%
-  --(4.592,3.380)--(4.646,3.376)--(4.646,3.381)--(4.753,3.381)--(4.806,3.377)--(4.806,3.375)%
-  --(4.887,3.376)--(5.074,3.377)--(5.128,3.374)--(5.502,3.371)--(5.556,3.386)--(5.636,3.384)%
-  --(5.663,3.385)--(5.690,3.388)--(5.743,4.792)--(5.931,4.786)--(5.931,4.793)--(6.091,4.793)%
-  --(6.118,4.791)--(6.172,4.788)--(6.279,4.788)--(6.306,4.786)--(6.466,4.790)--(6.520,4.790)%
-  --(6.546,4.785)--(6.546,4.782)--(6.734,4.768)--(6.761,4.764)--(6.841,4.759)--(7.055,4.772)%
-  --(7.189,4.770)--(7.216,4.768)--(7.323,4.758)--(7.323,4.757)--(7.376,5.509)--(7.510,5.506)%
-  --(7.510,5.503)--(7.778,5.498)--(8.179,5.496)--(8.313,5.493)--(8.634,5.500)--(9.732,8.337)%
-  --(9.919,8.341)--(10.026,8.346)--(10.133,8.346)--(10.187,8.345)--(10.348,8.337)--(10.562,10.992)%
-  --(10.642,10.988)--(10.990,10.985)--(11.017,10.983)--(11.499,10.979)--(11.579,10.977)--(11.633,10.977)%
-  --(11.740,10.975)--(12.141,10.972);
+\draw[gp path] (2.240,2.397)--(2.240,2.401)--(2.240,2.413)--(2.267,2.414)--(2.267,2.417)%
+  --(2.267,2.420)--(2.267,2.423)--(2.267,2.430)--(2.267,2.434)--(2.294,2.433)--(2.294,2.432)%
+  --(2.294,2.435)--(2.294,2.436)--(2.294,2.447)--(2.294,2.458)--(2.322,2.468)--(2.322,2.469)%
+  --(2.322,2.471)--(2.322,2.469)--(2.322,2.477)--(2.322,2.481)--(2.349,2.490)--(2.349,2.485)%
+  --(2.349,2.489)--(2.349,2.485)--(2.349,2.486)--(2.349,2.488)--(2.349,2.490)--(2.376,2.495)%
+  --(2.376,2.496)--(2.376,2.497)--(2.376,2.508)--(2.403,2.507)--(2.403,2.504)--(2.403,2.517)%
+  --(2.403,2.514)--(2.403,2.515)--(2.430,2.514)--(2.430,2.515)--(2.430,2.519)--(2.430,2.517)%
+  --(2.430,2.516)--(2.430,2.520)--(2.430,2.522)--(2.458,2.522)--(2.458,2.526)--(2.458,2.531)%
+  --(2.458,2.528)--(2.485,2.527)--(2.485,2.533)--(2.485,2.537)--(2.485,2.542)--(2.485,2.537)%
+  --(2.512,2.537)--(2.512,2.540)--(2.512,2.539)--(2.512,2.541)--(2.539,2.542)--(2.539,2.541)%
+  --(2.539,2.545)--(2.539,2.542)--(2.539,2.543)--(2.566,2.545)--(2.566,2.548)--(2.594,2.553)%
+  --(2.594,2.551)--(2.594,2.552)--(2.594,2.550)--(2.621,2.548)--(2.648,2.548)--(2.648,2.547)%
+  --(2.675,2.548)--(2.675,2.544)--(2.675,2.546)--(2.703,2.551)--(2.703,2.546)--(2.703,2.547)%
+  --(2.730,2.548)--(2.730,2.549)--(2.757,2.549)--(2.757,2.548)--(2.784,2.549)--(2.784,2.550)%
+  --(2.811,2.549)--(2.839,2.548)--(2.839,2.550)--(2.839,2.549)--(2.839,2.551)--(2.866,2.553)%
+  --(2.866,2.550)--(2.920,2.549)--(2.920,2.551)--(2.920,2.552)--(2.947,2.550)--(2.947,2.551)%
+  --(2.975,2.550)--(2.975,2.552)--(3.002,2.552)--(3.002,2.550)--(3.029,2.548)--(3.029,2.546)%
+  --(3.056,2.543)--(3.083,2.545)--(3.083,2.548)--(3.083,2.546)--(3.111,2.546)--(3.247,2.544)%
+  --(3.247,2.541)--(3.247,2.540)--(3.328,2.540)--(3.355,2.540)--(3.383,2.540)--(3.437,2.542)%
+  --(3.492,2.541)--(3.573,2.541)--(3.600,2.541)--(3.600,2.540)--(3.682,2.538)--(3.682,2.540)%
+  --(3.764,2.540)--(3.818,2.539)--(3.954,3.564)--(3.981,3.561)--(3.981,3.563)--(3.981,3.565)%
+  --(3.981,3.569)--(4.008,3.567)--(4.008,3.566)--(4.008,3.569)--(4.008,3.567)--(4.036,3.551)%
+  --(4.036,3.550)--(4.036,3.548)--(4.036,3.545)--(4.063,3.548)--(4.063,3.551)--(4.090,3.550)%
+  --(4.090,3.546)--(4.090,3.550)--(4.090,3.536)--(4.117,3.532)--(4.117,3.528)--(4.145,3.528)%
+  --(4.145,3.525)--(4.145,3.527)--(4.172,3.525)--(4.172,3.524)--(4.199,3.524)--(4.199,3.523)%
+  --(4.199,3.524)--(4.199,3.518)--(4.226,3.508)--(4.226,3.509)--(4.226,3.511)--(4.253,3.508)%
+  --(4.281,3.507)--(4.281,3.506)--(4.281,3.511)--(4.308,3.504)--(4.308,3.506)--(4.308,3.507)%
+  --(4.308,3.504)--(4.335,3.499)--(4.335,3.498)--(4.362,3.494)--(4.362,3.496)--(4.389,3.500)%
+  --(4.417,3.498)--(4.444,3.498)--(4.444,3.496)--(4.525,3.493)--(4.553,3.492)--(4.607,3.494)%
+  --(4.634,3.492)--(4.634,3.495)--(4.661,3.495)--(4.689,3.492)--(4.689,3.491)--(4.770,3.484)%
+  --(4.825,3.490)--(4.852,3.488)--(4.906,3.482)--(4.934,3.481)--(4.934,3.479)--(4.934,3.477)%
+  --(4.934,3.478)--(5.097,3.477)--(5.124,3.476)--(5.178,3.475)--(5.314,3.480)--(5.396,3.478)%
+  --(5.423,3.475)--(5.423,3.476)--(5.586,3.476)--(5.586,4.842)--(5.586,4.840)--(5.586,4.844)%
+  --(5.614,4.838)--(5.614,4.834)--(5.614,4.830)--(5.614,4.829)--(5.641,4.829)--(5.641,4.826)%
+  --(5.641,4.824)--(5.668,4.826)--(5.668,4.828)--(5.695,4.830)--(5.695,4.827)--(5.723,4.812)%
+  --(5.723,4.818)--(5.723,4.817)--(5.750,4.808)--(5.750,4.813)--(5.750,4.807)--(5.777,4.805)%
+  --(5.777,4.812)--(5.777,4.808)--(5.777,4.805)--(5.804,4.802)--(5.831,4.804)--(5.831,4.802)%
+  --(5.859,4.802)--(5.859,4.800)--(5.859,4.805)--(5.886,4.803)--(5.886,4.798)--(5.886,4.806)%
+  --(5.886,4.804)--(5.913,4.801)--(5.913,4.800)--(5.913,4.801)--(5.940,4.802)--(5.940,4.800)%
+  --(5.940,4.799)--(5.940,4.798)--(5.967,4.796)--(5.967,4.795)--(5.967,4.796)--(5.967,4.794)%
+  --(5.995,4.792)--(5.995,4.795)--(5.995,4.798)--(6.022,4.800)--(6.022,4.799)--(6.022,4.790)%
+  --(6.022,4.789)--(6.049,4.784)--(6.049,4.780)--(6.049,4.778)--(6.076,4.778)--(6.103,4.774)%
+  --(6.131,4.775)--(6.131,4.774)--(6.185,4.773)--(6.212,4.772)--(6.212,4.770)--(6.267,4.773)%
+  --(6.403,4.772)--(6.430,4.771)--(6.457,4.772)--(6.457,4.771)--(6.457,4.767)--(6.566,4.766)%
+  --(6.729,4.772)--(6.729,4.773)--(6.784,4.777)--(6.784,4.775)--(6.811,4.781)--(6.920,4.778)%
+  --(6.947,4.776)--(7.001,4.774)--(7.164,4.772)--(7.219,4.767)--(7.219,5.670)--(7.219,5.672)%
+  --(7.246,5.671)--(7.246,5.666)--(7.246,5.670)--(7.246,5.665)--(7.246,5.661)--(7.246,5.667)%
+  --(7.273,5.663)--(7.273,5.652)--(7.273,5.653)--(7.301,5.651)--(7.301,5.631)--(7.301,5.622)%
+  --(7.301,5.619)--(7.301,5.621)--(7.301,5.622)--(7.301,5.612)--(7.328,5.610)--(7.328,5.611)%
+  --(7.328,5.606)--(7.328,5.608)--(7.328,5.607)--(7.328,5.609)--(7.355,5.606)--(7.355,5.602)%
+  --(7.382,5.605)--(7.382,5.604)--(7.382,5.602)--(7.382,5.604)--(7.409,5.603)--(7.409,5.601)%
+  --(7.437,5.599)--(7.437,5.597)--(7.437,5.594)--(7.464,5.593)--(7.464,5.594)--(7.491,5.594)%
+  --(7.491,5.592)--(7.491,5.591)--(7.518,5.590)--(7.518,5.589)--(7.518,5.586)--(7.573,5.583)%
+  --(7.600,5.585)--(7.600,5.584)--(7.600,5.582)--(7.627,5.580)--(7.627,5.579)--(7.627,5.581)%
+  --(7.654,5.580)--(7.654,5.577)--(7.654,5.575)--(7.681,5.578)--(7.709,5.579)--(7.709,5.576)%
+  --(7.709,5.578)--(7.736,5.578)--(7.763,5.575)--(7.790,5.558)--(7.817,5.561)--(7.845,5.559)%
+  --(7.872,5.557)--(7.926,5.563)--(7.926,5.560)--(7.954,5.558)--(7.981,5.556)--(8.008,5.560)%
+  --(8.035,5.563)--(8.144,5.562)--(8.198,5.570)--(8.253,5.570)--(8.253,5.565)--(8.253,5.563)%
+  --(8.280,5.565)--(8.307,5.558)--(8.307,5.557)--(8.334,5.552)--(8.362,5.552)--(8.416,5.551)%
+  --(8.498,5.549)--(8.525,5.545)--(8.552,5.538)--(8.552,5.536)--(8.606,5.526)--(8.634,5.527)%
+  --(8.661,5.525)--(8.743,5.523)--(8.770,5.522)--(8.824,5.522)--(8.851,8.588)--(8.879,8.587)%
+  --(8.879,8.576)--(8.879,8.575)--(8.879,8.574)--(8.906,8.565)--(8.906,8.562)--(8.933,8.563)%
+  --(8.933,8.562)--(8.933,8.561)--(8.933,8.563)--(8.933,8.559)--(8.933,8.561)--(8.960,8.556)%
+  --(8.960,8.557)--(8.960,8.560)--(8.960,8.559)--(8.987,8.564)--(8.987,8.562)--(8.987,8.559)%
+  --(9.015,8.558)--(9.015,8.557)--(9.015,8.559)--(9.042,8.558)--(9.069,8.555)--(9.069,8.548)%
+  --(9.069,8.562)--(9.096,8.566)--(9.096,8.564)--(9.123,8.562)--(9.123,8.542)--(9.123,8.544)%
+  --(9.151,8.546)--(9.151,8.545)--(9.178,8.544)--(9.178,8.541)--(9.232,8.539)--(9.259,8.542)%
+  --(9.259,8.541)--(9.259,8.538)--(9.287,8.536)--(9.314,8.536)--(9.314,8.537)--(9.341,8.536)%
+  --(9.341,8.534)--(9.341,8.536)--(9.341,8.537)--(9.368,8.542)--(9.368,8.544)--(9.423,8.539)%
+  --(9.450,8.535)--(9.477,8.532)--(9.504,8.531)--(9.504,8.530)--(9.559,8.529)--(9.640,8.528)%
+  --(9.668,8.526)--(9.668,8.524)--(9.749,8.522)--(9.804,8.525)--(9.804,8.528)--(9.858,8.528)%
+  --(9.858,8.527)--(9.912,8.527)--(9.940,8.527)--(9.940,8.526)--(9.994,8.523)--(10.021,8.531)%
+  --(10.076,8.530)--(10.076,8.528)--(10.157,8.528)--(10.184,8.523)--(10.239,8.518)--(10.321,8.516)%
+  --(10.375,8.514)--(10.402,8.511)--(10.402,8.510)--(10.429,8.506)--(10.429,8.495)--(10.484,8.498)%
+  --(10.511,10.735)--(10.511,10.737)--(10.511,10.734)--(10.538,10.736)--(10.538,10.735)--(10.538,10.739)%
+  --(10.538,10.741)--(10.565,10.748)--(10.565,10.749)--(10.565,10.746)--(10.565,10.747)--(10.565,10.752)%
+  --(10.593,10.754)--(10.593,10.749)--(10.620,10.751)--(10.620,10.754)--(10.620,10.744)--(10.647,10.731)%
+  --(10.647,10.737)--(10.647,10.736)--(10.647,10.735)--(10.674,10.739)--(10.674,10.735)--(10.701,10.738)%
+  --(10.701,10.737)--(10.701,10.735)--(10.701,10.732)--(10.729,10.729)--(10.756,10.728)--(10.783,10.727)%
+  --(10.783,10.726)--(10.810,10.725)--(10.865,10.721)--(10.865,10.719)--(10.865,10.725)--(10.892,10.722)%
+  --(10.919,10.721)--(10.919,10.720)--(10.919,10.714)--(10.973,10.711)--(10.973,10.709)--(11.001,10.709)%
+  --(11.001,10.707)--(11.055,10.708)--(11.055,10.710)--(11.055,10.707)--(11.082,10.712)--(11.082,10.713)%
+  --(11.110,10.709)--(11.137,10.710)--(11.164,10.710)--(11.164,10.712)--(11.273,10.706)--(11.327,10.703)%
+  --(11.436,10.704)--(11.463,10.703)--(11.490,10.701)--(11.518,10.696)--(11.518,10.695)--(11.545,10.699)%
+  --(11.545,10.688)--(11.572,10.687)--(11.572,10.694)--(11.599,10.691)--(11.626,10.691)--(11.654,10.694)%
+  --(11.681,10.690)--(11.681,10.689)--(11.681,10.687)--(11.708,10.686)--(11.763,10.698)--(11.790,10.697)%
+  --(11.899,10.695)--(11.899,10.691)--(11.926,10.693)--(11.926,10.690)--(11.953,10.695)--(11.953,10.692)%
+  --(12.035,10.688)--(12.035,10.684)--(12.089,10.682);
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.199,9.740) {Strategic Resource Penalty};
 \gpcolor{rgb color={0.184,0.243,0.918}}
 \draw[gp path] (12.383,9.740)--(13.299,9.740);
-\draw[gp path] (2.424,10.698)--(2.424,10.386)--(2.451,10.248)--(2.451,9.925)--(2.451,9.742)%
-  --(2.451,9.554)--(2.451,9.332)--(2.451,9.172)--(2.451,8.895)--(2.478,8.721)--(2.478,8.594)%
-  --(2.478,8.524)--(2.478,8.419)--(2.478,8.240)--(2.478,8.153)--(2.504,8.027)--(2.504,7.857)%
-  --(2.504,7.763)--(2.504,7.712)--(2.504,7.566)--(2.504,7.361)--(2.504,7.171)--(2.531,7.106)%
-  --(2.531,7.034)--(2.531,6.894)--(2.531,6.634)--(2.531,6.473)--(2.531,6.381)--(2.558,6.325)%
-  --(2.558,6.233)--(2.558,6.166)--(2.558,6.050)--(2.558,6.039)--(2.558,6.026)--(2.558,6.008)%
-  --(2.585,5.995)--(2.585,5.956)--(2.585,5.897)--(2.585,5.862)--(2.585,5.795)--(2.585,5.685)%
-  --(2.585,5.655)--(2.611,5.603)--(2.611,5.583)--(2.611,5.476)--(2.638,5.393)--(2.638,5.354)%
-  --(2.638,5.332)--(2.638,5.328)--(2.638,5.312)--(2.638,5.271)--(2.638,5.183)--(2.665,5.070)%
-  --(2.665,5.064)--(2.665,5.048)--(2.692,4.948)--(2.692,4.924)--(2.692,4.895)--(2.692,4.808)%
-  --(2.718,4.808)--(2.718,4.546)--(2.745,4.538)--(2.745,4.522)--(2.745,4.448)--(2.745,4.444)%
-  --(2.772,4.424)--(2.772,4.392)--(2.772,4.387)--(2.772,4.383)--(2.772,4.049)--(2.799,4.042)%
-  --(2.799,4.018)--(2.826,4.003)--(2.826,3.985)--(2.826,3.973)--(2.852,3.961)--(2.879,3.961)%
-  --(2.879,3.944)--(2.879,3.916)--(2.879,3.901)--(2.879,3.859)--(2.906,3.859)--(2.906,3.837)%
-  --(2.906,3.829)--(2.933,3.804)--(2.933,3.800)--(2.933,3.785)--(2.986,3.778)--(2.986,3.767)%
-  --(3.013,3.752)--(3.013,3.746)--(3.040,3.691)--(3.040,3.689)--(3.040,3.676)--(3.066,3.660)%
-  --(3.066,3.658)--(3.066,3.654)--(3.093,3.650)--(3.120,3.591)--(3.147,3.569)--(3.147,3.545)%
-  --(3.147,3.484)--(3.147,3.469)--(3.174,3.466)--(3.200,3.451)--(3.200,3.449)--(3.200,3.434)%
-  --(3.200,3.421)--(3.281,3.421)--(3.281,3.409)--(3.307,3.399)--(3.307,3.361)--(3.334,3.361)%
-  --(3.334,3.359)--(3.334,3.355)--(3.361,3.006)--(3.388,3.004)--(3.441,3.004)--(3.522,2.986)%
-  --(3.548,2.975)--(3.548,2.971)--(3.736,2.960)--(3.762,2.953)--(3.762,2.949)--(3.816,2.949)%
-  --(3.977,2.949)--(3.977,2.940)--(4.003,2.940)--(4.110,2.940)--(4.137,2.930)--(4.137,2.929)%
-  --(4.164,2.929)--(4.191,2.929)--(4.244,2.910)--(4.271,2.910)--(4.298,2.910)--(4.325,2.908)%
-  --(4.351,2.908)--(4.351,2.875)--(4.458,2.875)--(4.458,2.864)--(4.539,2.864)--(4.592,2.860)%
-  --(4.646,2.857)--(4.646,2.847)--(4.753,2.847)--(4.806,2.847)--(4.887,2.847)--(5.074,2.825)%
-  --(5.128,2.823)--(5.502,2.823)--(5.556,2.810)--(5.636,2.810)--(5.663,2.770)--(5.690,2.766)%
-  --(5.743,2.766)--(5.931,2.766)--(5.931,2.751)--(6.091,2.733)--(6.118,2.733)--(6.172,2.733)%
-  --(6.279,2.733)--(6.306,2.733)--(6.466,2.724)--(6.520,2.724)--(6.546,2.718)--(6.734,2.718)%
-  --(6.761,2.718)--(6.841,2.718)--(7.055,2.713)--(7.189,2.713)--(7.216,2.713)--(7.323,2.713)%
-  --(7.376,2.713)--(7.510,2.713)--(7.778,2.713)--(8.179,2.713)--(8.313,2.713)--(8.634,2.709)%
-  --(9.732,2.703)--(9.919,2.702)--(10.026,2.698)--(10.133,2.698)--(10.187,2.698)--(10.348,2.698)%
-  --(10.562,2.694)--(10.642,2.694)--(10.990,2.694)--(11.017,2.694)--(11.499,2.694)--(11.579,2.694)%
-  --(11.633,2.694)--(11.740,2.694)--(12.141,2.694);
+\draw[gp path] (2.240,10.107)--(2.240,9.850)--(2.240,9.632)--(2.267,9.547)--(2.267,9.455)%
+  --(2.267,9.332)--(2.267,9.027)--(2.267,8.944)--(2.267,8.818)--(2.294,8.689)--(2.294,8.586)%
+  --(2.294,8.555)--(2.294,8.340)--(2.294,8.151)--(2.294,7.969)--(2.322,7.866)--(2.322,7.745)%
+  --(2.322,7.718)--(2.322,7.694)--(2.322,7.561)--(2.322,7.475)--(2.349,7.357)--(2.349,7.326)%
+  --(2.349,7.200)--(2.349,7.171)--(2.349,7.154)--(2.349,7.092)--(2.349,7.072)--(2.376,7.041)%
+  --(2.376,6.955)--(2.376,6.868)--(2.376,6.842)--(2.376,6.788)--(2.376,6.717)--(2.403,6.680)%
+  --(2.403,6.645)--(2.403,6.500)--(2.403,6.463)--(2.403,6.445)--(2.430,6.438)--(2.430,6.375)%
+  --(2.430,6.254)--(2.430,6.225)--(2.430,6.172)--(2.430,6.128)--(2.430,6.091)--(2.458,6.006)%
+  --(2.458,5.722)--(2.458,5.682)--(2.458,5.668)--(2.485,5.632)--(2.485,5.626)--(2.485,5.562)%
+  --(2.485,5.468)--(2.485,5.455)--(2.512,5.443)--(2.512,5.431)--(2.512,5.411)--(2.512,5.375)%
+  --(2.539,5.368)--(2.539,5.359)--(2.539,5.306)--(2.539,5.289)--(2.539,5.275)--(2.566,5.249)%
+  --(2.566,5.115)--(2.566,5.068)--(2.594,5.045)--(2.594,5.039)--(2.594,4.991)--(2.594,4.928)%
+  --(2.594,4.926)--(2.621,4.862)--(2.648,4.837)--(2.648,4.828)--(2.675,4.826)--(2.675,4.820)%
+  --(2.675,4.817)--(2.703,4.802)--(2.703,4.749)--(2.703,4.714)--(2.730,4.640)--(2.730,4.617)%
+  --(2.730,4.596)--(2.730,4.582)--(2.757,4.569)--(2.757,4.568)--(2.757,4.546)--(2.784,4.543)%
+  --(2.784,4.526)--(2.811,4.520)--(2.839,4.516)--(2.839,4.509)--(2.839,4.497)--(2.866,4.488)%
+  --(2.920,4.480)--(2.920,4.476)--(2.920,4.471)--(2.947,4.468)--(2.947,4.434)--(2.947,4.431)%
+  --(2.947,4.429)--(2.975,4.408)--(2.975,4.391)--(3.002,4.383)--(3.029,4.383)--(3.029,4.363)%
+  --(3.056,4.363)--(3.083,4.342)--(3.083,4.322)--(3.083,4.311)--(3.111,4.305)--(3.247,4.305)%
+  --(3.247,4.294)--(3.328,4.294)--(3.355,4.294)--(3.383,4.289)--(3.437,4.079)--(3.437,4.076)%
+  --(3.492,4.076)--(3.573,4.071)--(3.573,4.063)--(3.600,4.059)--(3.600,4.049)--(3.682,4.043)%
+  --(3.682,4.034)--(3.764,4.034)--(3.818,4.034)--(3.954,5.097)--(3.954,5.068)--(3.981,5.066)%
+  --(3.981,5.051)--(3.981,5.046)--(3.981,5.006)--(4.008,5.006)--(4.008,4.874)--(4.008,4.872)%
+  --(4.008,4.845)--(4.036,4.672)--(4.036,4.652)--(4.036,4.626)--(4.036,4.602)--(4.036,4.597)%
+  --(4.063,4.572)--(4.063,4.537)--(4.063,4.536)--(4.090,4.536)--(4.090,4.526)--(4.090,4.520)%
+  --(4.090,4.459)--(4.117,4.454)--(4.117,4.451)--(4.145,4.437)--(4.145,4.431)--(4.172,4.414)%
+  --(4.172,4.405)--(4.172,4.369)--(4.199,4.369)--(4.199,4.340)--(4.199,4.319)--(4.199,4.289)%
+  --(4.226,4.171)--(4.226,4.168)--(4.226,4.159)--(4.253,4.140)--(4.281,4.140)--(4.281,4.136)%
+  --(4.308,4.136)--(4.308,4.126)--(4.308,4.120)--(4.308,4.093)--(4.308,4.082)--(4.335,4.082)%
+  --(4.335,4.071)--(4.362,4.071)--(4.362,4.063)--(4.389,4.054)--(4.417,4.054)--(4.444,4.049)%
+  --(4.444,4.046)--(4.525,4.043)--(4.553,4.043)--(4.607,4.016)--(4.634,3.982)--(4.634,3.969)%
+  --(4.661,3.940)--(4.689,3.940)--(4.689,3.926)--(4.770,3.926)--(4.825,3.911)--(4.852,3.905)%
+  --(4.906,3.905)--(4.934,3.905)--(4.934,3.874)--(4.934,3.865)--(5.097,3.865)--(5.124,3.865)%
+  --(5.178,3.859)--(5.314,3.851)--(5.396,3.851)--(5.423,3.851)--(5.423,3.845)--(5.423,3.829)%
+  --(5.586,3.829)--(5.586,5.094)--(5.586,5.086)--(5.586,5.039)--(5.614,4.919)--(5.614,4.877)%
+  --(5.614,4.866)--(5.614,4.808)--(5.641,4.774)--(5.641,4.759)--(5.668,4.714)--(5.668,4.705)%
+  --(5.695,4.692)--(5.723,4.599)--(5.723,4.574)--(5.750,4.431)--(5.750,4.405)--(5.750,4.219)%
+  --(5.777,4.219)--(5.777,4.216)--(5.777,4.197)--(5.777,4.169)--(5.804,4.169)--(5.831,4.123)%
+  --(5.859,4.120)--(5.859,4.108)--(5.859,4.096)--(5.859,4.086)--(5.886,4.086)--(5.886,4.082)%
+  --(5.886,4.023)--(5.913,4.023)--(5.913,4.020)--(5.913,4.019)--(5.913,4.008)--(5.940,4.000)%
+  --(5.940,3.971)--(5.940,3.939)--(5.967,3.939)--(5.967,3.928)--(5.995,3.928)--(5.995,3.896)%
+  --(5.995,3.819)--(6.022,3.682)--(6.022,3.665)--(6.049,3.603)--(6.049,3.585)--(6.049,3.577)%
+  --(6.076,3.576)--(6.103,3.563)--(6.131,3.559)--(6.185,3.559)--(6.212,3.559)--(6.267,3.497)%
+  --(6.403,3.497)--(6.430,3.497)--(6.457,3.463)--(6.457,3.451)--(6.566,3.419)--(6.566,3.416)%
+  --(6.729,3.413)--(6.729,3.408)--(6.784,3.402)--(6.784,3.388)--(6.811,3.386)--(6.920,3.386)%
+  --(6.947,3.386)--(7.001,3.386)--(7.001,3.377)--(7.164,3.377)--(7.219,3.377)--(7.219,4.700)%
+  --(7.219,4.643)--(7.246,4.626)--(7.246,4.599)--(7.246,4.582)--(7.246,4.579)--(7.246,4.552)%
+  --(7.246,4.503)--(7.273,4.503)--(7.273,4.459)--(7.273,4.429)--(7.301,4.428)--(7.301,4.423)%
+  --(7.301,4.356)--(7.301,4.325)--(7.301,4.319)--(7.301,4.309)--(7.301,4.291)--(7.328,4.249)%
+  --(7.328,4.109)--(7.328,4.099)--(7.328,4.082)--(7.328,4.043)--(7.355,4.040)--(7.355,3.933)%
+  --(7.382,3.877)--(7.382,3.856)--(7.382,3.848)--(7.409,3.825)--(7.409,3.809)--(7.409,3.806)%
+  --(7.437,3.806)--(7.437,3.805)--(7.437,3.793)--(7.464,3.777)--(7.464,3.773)--(7.491,3.773)%
+  --(7.491,3.763)--(7.491,3.737)--(7.518,3.737)--(7.518,3.731)--(7.518,3.720)--(7.573,3.720)%
+  --(7.600,3.711)--(7.627,3.699)--(7.627,3.651)--(7.627,3.642)--(7.654,3.642)--(7.654,3.608)%
+  --(7.681,3.602)--(7.709,3.582)--(7.709,3.576)--(7.736,3.576)--(7.763,3.576)--(7.790,3.422)%
+  --(7.817,3.380)--(7.845,3.380)--(7.845,3.371)--(7.872,3.369)--(7.926,3.353)--(7.926,3.059)%
+  --(7.954,3.059)--(7.954,3.057)--(7.981,3.057)--(8.008,3.013)--(8.035,2.994)--(8.144,2.994)%
+  --(8.198,2.993)--(8.253,2.993)--(8.280,2.928)--(8.307,2.928)--(8.334,2.916)--(8.362,2.916)%
+  --(8.416,2.916)--(8.498,2.916)--(8.525,2.911)--(8.552,2.911)--(8.606,2.911)--(8.634,2.648)%
+  --(8.661,2.639)--(8.743,2.639)--(8.770,2.634)--(8.824,2.634)--(8.851,4.163)--(8.879,4.156)%
+  --(8.879,4.103)--(8.879,4.085)--(8.879,3.842)--(8.906,3.740)--(8.906,3.736)--(8.906,3.717)%
+  --(8.933,3.696)--(8.933,3.659)--(8.933,3.637)--(8.933,3.617)--(8.933,3.580)--(8.933,3.546)%
+  --(8.960,3.486)--(8.960,3.425)--(8.960,3.413)--(8.960,3.403)--(8.987,3.402)--(8.987,3.313)%
+  --(9.015,3.313)--(9.015,3.294)--(9.015,3.260)--(9.015,3.226)--(9.042,3.202)--(9.069,3.202)%
+  --(9.069,3.057)--(9.096,3.051)--(9.096,3.017)--(9.123,3.017)--(9.123,2.865)--(9.123,2.845)%
+  --(9.151,2.843)--(9.178,2.843)--(9.178,2.837)--(9.178,2.830)--(9.232,2.830)--(9.259,2.791)%
+  --(9.259,2.751)--(9.287,2.751)--(9.314,2.725)--(9.314,2.723)--(9.341,2.705)--(9.341,2.676)%
+  --(9.341,2.665)--(9.368,2.663)--(9.368,2.643)--(9.423,2.643)--(9.450,2.605)--(9.477,2.590)%
+  --(9.504,2.590)--(9.559,2.590)--(9.640,2.583)--(9.668,2.583)--(9.749,2.583)--(9.804,2.571)%
+  --(9.804,2.570)--(9.858,2.570)--(9.858,2.563)--(9.912,2.563)--(9.940,2.563)--(9.994,2.563)%
+  --(10.021,2.560)--(10.076,2.559)--(10.157,2.559)--(10.184,2.559)--(10.239,2.557)--(10.321,2.557)%
+  --(10.375,2.557)--(10.402,2.546)--(10.429,2.546)--(10.484,2.525)--(10.511,3.603)--(10.511,3.511)%
+  --(10.511,3.502)--(10.538,3.494)--(10.538,3.456)--(10.538,3.391)--(10.538,3.119)--(10.565,3.102)%
+  --(10.565,3.073)--(10.565,3.053)--(10.565,3.036)--(10.565,3.013)--(10.593,3.008)--(10.620,2.990)%
+  --(10.620,2.959)--(10.647,2.848)--(10.647,2.833)--(10.647,2.797)--(10.647,2.794)--(10.674,2.757)%
+  --(10.674,2.743)--(10.701,2.734)--(10.701,2.728)--(10.701,2.645)--(10.729,2.596)--(10.756,2.586)%
+  --(10.783,2.577)--(10.783,2.568)--(10.810,2.566)--(10.865,2.563)--(10.865,2.556)--(10.892,2.537)%
+  --(10.919,2.502)--(10.919,2.486)--(10.973,2.482)--(11.001,2.482)--(11.001,2.470)--(11.055,2.457)%
+  --(11.055,2.456)--(11.082,2.451)--(11.082,2.439)--(11.110,2.439)--(11.110,2.422)--(11.137,2.420)%
+  --(11.164,2.406)--(11.164,2.402)--(11.273,2.402)--(11.327,2.402)--(11.436,2.400)--(11.463,2.390)%
+  --(11.490,2.390)--(11.518,2.390)--(11.545,2.374)--(11.572,2.374)--(11.572,2.357)--(11.599,2.357)%
+  --(11.626,2.346)--(11.654,2.342)--(11.681,2.342)--(11.708,2.320)--(11.763,2.314)--(11.790,2.314)%
+  --(11.899,2.314)--(11.926,2.297)--(11.953,2.294)--(12.035,2.294)--(12.035,2.271)--(12.089,2.271);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
+\draw[gp path] (2.240,11.075)--(2.240,1.845)--(13.667,1.845)--(13.667,11.075)--cycle;
 \node[gp node center,rotate=-270] at (-0.628,6.460) {Strategic Urgency [Weighted Tardiness]};
 \node[gp node center,rotate=-270] at (16.213,6.460) {Strategic Resource Penalty [Hours]};
-\node[gp node center] at (8.045,0.215) {Relative time ($\tau$) [Seconds]};
-\node[gp node center] at (8.045,11.537) {Objective Values for Weekly Schedule};
+\node[gp node center] at (7.953,0.215) {Relative time ($\tau$) [Seconds]};
+\node[gp node center] at (7.953,11.537) {Objective Values for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{13.667cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.240cm}{1.845cm}}{\pgfpoint{13.667cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
